update config to 2.6.39-rc6
git-svn-id: svn://svn.debian.org/svn/kernel/dists/trunk@17327 510b9475-24dd-0310-9b6c-e0eefe99d49f

--- a/linux-2.6/debian/config/alpha/config
+++ b/linux-2.6/debian/config/alpha/config
@@ -153,24 +153,7 @@ CONFIG_BT_HCIVHCI=m
 ##
 ## file: drivers/char/Kconfig
 ##
-CONFIG_VT=y
-CONFIG_VT_CONSOLE=y
-# CONFIG_SERIAL_NONSTANDARD is not set
-CONFIG_ROCKETPORT=m
-CONFIG_CYCLADES=m
-# CONFIG_CYZ_INTR is not set
-# CONFIG_DIGIEPCA is not set
-CONFIG_MOXA_INTELLIO=m
-CONFIG_ISI=m
-CONFIG_SYNCLINK=m
-CONFIG_SYNCLINKMP=m
-CONFIG_N_HDLC=m
-CONFIG_SPECIALIX=m
-CONFIG_SX=m
-# CONFIG_RIO is not set
 CONFIG_STALDRV=y
-CONFIG_STALLION=m
-CONFIG_ISTALLION=m
 CONFIG_PRINTER=m
 # CONFIG_LP_CONSOLE is not set
 CONFIG_PPDEV=m
@@ -461,7 +444,6 @@ CONFIG_RADIO_RTRACK=m
 CONFIG_RADIO_RTRACK2=m
 CONFIG_RADIO_AZTECH=m
 CONFIG_RADIO_GEMTEK=m
-CONFIG_RADIO_GEMTEK_PCI=m
 CONFIG_RADIO_MAXIRADIO=m
 CONFIG_RADIO_MAESTRO=m
 CONFIG_RADIO_SF16FMI=m
@@ -497,7 +479,6 @@ CONFIG_MMC_BLOCK=m
 ##
 CONFIG_MTD=m
 # CONFIG_MTD_DEBUG is not set
-CONFIG_MTD_CONCAT=m
 CONFIG_MTD_PARTITIONS=y
 CONFIG_MTD_REDBOOT_PARTS=y
 CONFIG_MTD_REDBOOT_DIRECTORY_BLOCK=-1
@@ -857,7 +838,43 @@ CONFIG_PCMCIA_QLOGIC=m
 CONFIG_PCMCIA_SYM53C500=m
 
 ##
-## file: drivers/serial/Kconfig
+## file: drivers/staging/generic_serial/Kconfig
+##
+CONFIG_SX=m
+# CONFIG_RIO is not set
+
+##
+## file: drivers/staging/tty/Kconfig
+##
+CONFIG_STALLION=m
+CONFIG_ISTALLION=m
+# CONFIG_DIGIEPCA is not set
+CONFIG_SPECIALIX=m
+
+##
+## file: drivers/telephony/Kconfig
+##
+CONFIG_PHONE=m
+CONFIG_PHONE_IXJ=m
+CONFIG_PHONE_IXJ_PCMCIA=m
+
+##
+## file: drivers/tty/Kconfig
+##
+CONFIG_VT=y
+CONFIG_VT_CONSOLE=y
+# CONFIG_SERIAL_NONSTANDARD is not set
+CONFIG_ROCKETPORT=m
+CONFIG_CYCLADES=m
+# CONFIG_CYZ_INTR is not set
+CONFIG_MOXA_INTELLIO=m
+CONFIG_SYNCLINK=m
+CONFIG_SYNCLINKMP=m
+CONFIG_ISI=m
+CONFIG_N_HDLC=m
+
+##
+## file: drivers/tty/serial/Kconfig
 ##
 CONFIG_SERIAL_8250=y
 CONFIG_SERIAL_8250_CONSOLE=y
@@ -870,13 +887,6 @@ CONFIG_SERIAL_8250_SHARE_IRQ=y
 # CONFIG_SERIAL_8250_DETECT_IRQ is not set
 CONFIG_SERIAL_8250_RSA=y
 CONFIG_SERIAL_JSM=m
-
-##
-## file: drivers/telephony/Kconfig
-##
-CONFIG_PHONE=m
-CONFIG_PHONE_IXJ=m
-CONFIG_PHONE_IXJ_PCMCIA=m
 
 ##
 ## file: drivers/usb/Kconfig
@@ -1177,4 +1187,10 @@ CONFIG_SND_YMFPCI=m
 ## file: sound/pci/hda/Kconfig
 ##
 CONFIG_SND_HDA_INTEL=m
+
+##
+## file: unknown
+##
+CONFIG_MTD_CONCAT=m
+CONFIG_RADIO_GEMTEK_PCI=m
 
