--- a/linux-2.6/debian/config/armel/config
+++ b/linux-2.6/debian/config/armel/config
@@ -12,7 +12,7 @@ CONFIG_DEBUG_LL=y
 CONFIG_EARLY_PRINTK=y
 
 ##
-## file: "arch/arm/mm/Kconfig"
+## file: arch/arm/mm/Kconfig
 ##
 #. Support Thumb user binaries
 CONFIG_ARM_THUMB=y
@@ -98,3 +98,4 @@ CONFIG_YAM=m
 # CONFIG_KERNEL_BZIP2 is not set
 CONFIG_KERNEL_LZMA=y
 ## end choice
+
