--- a/linux-2.6/debian/config/ia64/config
+++ b/linux-2.6/debian/config/ia64/config
@@ -87,21 +87,6 @@ CONFIG_CDROM_PKTCDVD_BUFFERS=8
 ##
 ## file: drivers/char/Kconfig
 ##
-CONFIG_VT=y
-CONFIG_VT_CONSOLE=y
-CONFIG_SERIAL_NONSTANDARD=y
-CONFIG_ROCKETPORT=m
-# CONFIG_CYCLADES is not set
-CONFIG_DIGIEPCA=m
-CONFIG_MOXA_INTELLIO=m
-# CONFIG_MOXA_SMARTIO is not set
-# CONFIG_ISI is not set
-CONFIG_SYNCLINKMP=m
-CONFIG_N_HDLC=m
-CONFIG_SPECIALIX=m
-CONFIG_SX=m
-CONFIG_RIO=m
-CONFIG_RIO_OLDPCI=y
 CONFIG_STALDRV=y
 CONFIG_SGI_SNSC=y
 CONFIG_SGI_TIOCX=y
@@ -378,7 +363,6 @@ CONFIG_DVB_CORE=m
 ##
 ## file: drivers/media/radio/Kconfig
 ##
-CONFIG_RADIO_GEMTEK_PCI=m
 CONFIG_RADIO_MAXIRADIO=m
 CONFIG_RADIO_MAESTRO=m
 CONFIG_USB_DSBR=m
@@ -586,7 +570,51 @@ CONFIG_PCMCIA_QLOGIC=m
 CONFIG_PCMCIA_SYM53C500=m
 
 ##
-## file: drivers/serial/Kconfig
+## file: drivers/sn/Kconfig
+##
+CONFIG_SGI_IOC3=m
+
+##
+## file: drivers/staging/generic_serial/Kconfig
+##
+CONFIG_SX=m
+CONFIG_RIO=m
+CONFIG_RIO_OLDPCI=y
+
+##
+## file: drivers/staging/tty/Kconfig
+##
+CONFIG_DIGIEPCA=m
+CONFIG_SPECIALIX=m
+
+##
+## file: drivers/staging/wlan-ng/Kconfig
+##
+# CONFIG_PRISM2_USB is not set
+
+##
+## file: drivers/telephony/Kconfig
+##
+CONFIG_PHONE=m
+CONFIG_PHONE_IXJ=m
+CONFIG_PHONE_IXJ_PCMCIA=m
+
+##
+## file: drivers/tty/Kconfig
+##
+CONFIG_VT=y
+CONFIG_VT_CONSOLE=y
+CONFIG_SERIAL_NONSTANDARD=y
+CONFIG_ROCKETPORT=m
+# CONFIG_CYCLADES is not set
+CONFIG_MOXA_INTELLIO=m
+# CONFIG_MOXA_SMARTIO is not set
+CONFIG_SYNCLINKMP=m
+# CONFIG_ISI is not set
+CONFIG_N_HDLC=m
+
+##
+## file: drivers/tty/serial/Kconfig
 ##
 CONFIG_SERIAL_8250=y
 CONFIG_SERIAL_8250_CONSOLE=y
@@ -601,23 +629,6 @@ CONFIG_SERIAL_SGI_L1_CONSOLE=y
 CONFIG_SERIAL_JSM=m
 CONFIG_SERIAL_SGI_IOC4=m
 CONFIG_SERIAL_SGI_IOC3=m
-
-##
-## file: drivers/sn/Kconfig
-##
-CONFIG_SGI_IOC3=m
-
-##
-## file: drivers/staging/wlan-ng/Kconfig
-##
-# CONFIG_PRISM2_USB is not set
-
-##
-## file: drivers/telephony/Kconfig
-##
-CONFIG_PHONE=m
-CONFIG_PHONE_IXJ=m
-CONFIG_PHONE_IXJ_PCMCIA=m
 
 ##
 ## file: drivers/usb/Kconfig
@@ -817,4 +828,5 @@ CONFIG_SND_HDA_INTEL=m
 ## file: unknown
 ##
 CONFIG_IA32_SUPPORT=y
+CONFIG_RADIO_GEMTEK_PCI=m
 
