--- a/linux-2.6/debian/config/powerpc/config
+++ b/linux-2.6/debian/config/powerpc/config
@@ -145,11 +145,7 @@ CONFIG_BT_HCIVHCI=m
 ##
 ## file: drivers/char/Kconfig
 ##
-CONFIG_VT=y
-CONFIG_VT_CONSOLE=y
-# CONFIG_SERIAL_NONSTANDARD is not set
 CONFIG_PRINTER=m
-CONFIG_HVC_RTAS=y
 CONFIG_NVRAM=y
 CONFIG_DTLK=m
 CONFIG_APPLICOM=m
@@ -439,7 +435,6 @@ CONFIG_DVB_CORE=m
 ##
 ## file: drivers/media/radio/Kconfig
 ##
-CONFIG_RADIO_GEMTEK_PCI=m
 CONFIG_RADIO_MAXIRADIO=m
 CONFIG_RADIO_MAESTRO=m
 CONFIG_USB_DSBR=m
@@ -699,7 +694,26 @@ CONFIG_PCMCIA_QLOGIC=m
 CONFIG_PCMCIA_SYM53C500=m
 
 ##
-## file: drivers/serial/Kconfig
+## file: drivers/telephony/Kconfig
+##
+CONFIG_PHONE=m
+CONFIG_PHONE_IXJ=m
+CONFIG_PHONE_IXJ_PCMCIA=m
+
+##
+## file: drivers/tty/Kconfig
+##
+CONFIG_VT=y
+CONFIG_VT_CONSOLE=y
+# CONFIG_SERIAL_NONSTANDARD is not set
+
+##
+## file: drivers/tty/hvc/Kconfig
+##
+CONFIG_HVC_RTAS=y
+
+##
+## file: drivers/tty/serial/Kconfig
 ##
 CONFIG_SERIAL_8250=y
 CONFIG_SERIAL_8250_CONSOLE=y
@@ -710,13 +724,6 @@ CONFIG_SERIAL_8250_RUNTIME_UARTS=4
 CONFIG_SERIAL_PMACZILOG=y
 CONFIG_SERIAL_PMACZILOG_CONSOLE=y
 CONFIG_SERIAL_JSM=m
-
-##
-## file: drivers/telephony/Kconfig
-##
-CONFIG_PHONE=m
-CONFIG_PHONE_IXJ=m
-CONFIG_PHONE_IXJ_PCMCIA=m
 
 ##
 ## file: drivers/usb/Kconfig
@@ -985,4 +992,9 @@ CONFIG_SND_HDA_INTEL=m
 ##
 CONFIG_SND_POWERMAC=m
 CONFIG_SND_POWERMAC_AUTO_DRC=y
+
+##
+## file: unknown
+##
+CONFIG_RADIO_GEMTEK_PCI=m
 
