--- a/linux-2.6/debian/config/sparc/config
+++ b/linux-2.6/debian/config/sparc/config
@@ -37,9 +37,6 @@ CONFIG_SUNVDC=m
 ##
 ## file: drivers/char/Kconfig
 ##
-CONFIG_VT=y
-CONFIG_VT_CONSOLE=y
-# CONFIG_SERIAL_NONSTANDARD is not set
 CONFIG_PRINTER=m
 # CONFIG_LP_CONSOLE is not set
 # CONFIG_PPDEV is not set
@@ -233,14 +230,8 @@ CONFIG_SERIO_LIBPS2=y
 # CONFIG_INPUT_TOUCHSCREEN is not set
 
 ##
-## file: drivers/media/Kconfig
-##
-CONFIG_VIDEO_V4L1_COMPAT=y
-
-##
 ## file: drivers/media/radio/Kconfig
 ##
-# CONFIG_RADIO_GEMTEK_PCI is not set
 # CONFIG_RADIO_MAXIRADIO is not set
 # CONFIG_RADIO_MAESTRO is not set
 # CONFIG_USB_DSBR is not set
@@ -398,7 +389,19 @@ CONFIG_MEGARAID_MAILBOX=m
 CONFIG_MEGARAID_LEGACY=m
 
 ##
-## file: drivers/serial/Kconfig
+## file: drivers/telephony/Kconfig
+##
+# CONFIG_PHONE is not set
+
+##
+## file: drivers/tty/Kconfig
+##
+CONFIG_VT=y
+CONFIG_VT_CONSOLE=y
+# CONFIG_SERIAL_NONSTANDARD is not set
+
+##
+## file: drivers/tty/serial/Kconfig
 ##
 CONFIG_SERIAL_SUNZILOG=y
 CONFIG_SERIAL_SUNZILOG_CONSOLE=y
@@ -408,21 +411,6 @@ CONFIG_SERIAL_SUNSAB=y
 CONFIG_SERIAL_SUNSAB_CONSOLE=y
 CONFIG_SERIAL_SUNHV=y
 CONFIG_SERIAL_JSM=m
-
-##
-## file: drivers/staging/cpia/Kconfig
-##
-# CONFIG_VIDEO_CPIA is not set
-
-##
-## file: drivers/staging/stradis/Kconfig
-##
-# CONFIG_VIDEO_STRADIS is not set
-
-##
-## file: drivers/telephony/Kconfig
-##
-# CONFIG_PHONE is not set
 
 ##
 ## file: drivers/usb/Kconfig
@@ -650,7 +638,11 @@ CONFIG_SND_SUN_DBRI=m
 ##
 ## file: unknown
 ##
+# CONFIG_RADIO_GEMTEK_PCI is not set
+# CONFIG_VIDEO_CPIA is not set
 # CONFIG_VIDEO_OVCAMCHIP is not set
 # CONFIG_VIDEO_SAA5246A is not set
 # CONFIG_VIDEO_SAA5249 is not set
+# CONFIG_VIDEO_STRADIS is not set
+CONFIG_VIDEO_V4L1_COMPAT=y
 
