--- a/linux-2.6/debian/config/config
+++ b/linux-2.6/debian/config/config
@@ -226,19 +226,7 @@ CONFIG_BT_ATH3K=m
 ##
 ## file: drivers/char/Kconfig
 ##
-CONFIG_VT_HW_CONSOLE_BINDING=y
 # CONFIG_DEVKMEM is not set
-CONFIG_COMPUTONE=m
-CONFIG_MOXA_SMARTIO=m
-CONFIG_SYNCLINK_GT=m
-CONFIG_N_GSM=m
-CONFIG_RISCOM8=m
-# CONFIG_STALLION is not set
-# CONFIG_ISTALLION is not set
-CONFIG_NOZOMI=m
-CONFIG_UNIX98_PTYS=y
-CONFIG_DEVPTS_MULTIPLE_INSTANCES=y
-# CONFIG_LEGACY_PTYS is not set
 CONFIG_VIRTIO_CONSOLE=m
 # CONFIG_R3964 is not set
 CONFIG_PC8736x_GPIO=m
@@ -387,7 +375,6 @@ CONFIG_HID_CANDO=m
 CONFIG_HID_PRODIKEYS=m
 CONFIG_HID_DRAGONRISE=m
 CONFIG_DRAGONRISE_FF=y
-CONFIG_HID_EGALAX=m
 CONFIG_HID_ELECOM=m
 CONFIG_HID_UCLOGIC=m
 CONFIG_HID_WALTOP=m
@@ -488,11 +475,9 @@ CONFIG_SENSORS_W83L786NG=m
 CONFIG_SENSORS_W83627EHF=m
 CONFIG_SENSORS_WM831X=m
 CONFIG_SENSORS_WM8350=m
-CONFIG_SENSORS_LIS3_I2C=m
 CONFIG_SENSORS_APPLESMC=m
 CONFIG_SENSORS_MC13783_ADC=m
 CONFIG_SENSORS_ATK0110=m
-CONFIG_SENSORS_LIS3LV02D=m
 
 ##
 ## file: drivers/i2c/Kconfig
@@ -686,7 +671,6 @@ CONFIG_INPUT_KEYSPAN_REMOTE=m
 CONFIG_INPUT_POWERMATE=m
 CONFIG_INPUT_YEALINK=m
 CONFIG_INPUT_CM109=m
-CONFIG_INPUT_WINBOND_CIR=m
 CONFIG_INPUT_PCF50633_PMU=m
 # CONFIG_INPUT_GPIO_ROTARY_ENCODER is not set
 CONFIG_INPUT_WM831X_ON=m
@@ -855,32 +839,6 @@ CONFIG_DM_UEVENT=y
 ##
 CONFIG_MEDIA_SUPPORT=m
 CONFIG_VIDEO_DEV=m
-CONFIG_VIDEO_ALLOW_V4L1=y
-CONFIG_VIDEO_V4L1_COMPAT=y
-CONFIG_DAB=y
-CONFIG_USB_DABUSB=m
-
-##
-## file: drivers/media/rc/Kconfig
-##
-CONFIG_RC_CORE=m
-CONFIG_IR_NEC_DECODER=m
-CONFIG_IR_RC5_DECODER=m
-CONFIG_IR_RC6_DECODER=m
-CONFIG_IR_JVC_DECODER=m
-CONFIG_IR_SONY_DECODER=m
-CONFIG_IR_RC5_SZ_DECODER=m
-CONFIG_IR_LIRC_CODEC=m
-CONFIG_IR_ENE=m
-CONFIG_IR_IMON=m
-CONFIG_IR_MCEUSB=m
-# CONFIG_IR_NUVOTON is not set
-CONFIG_IR_STREAMZAP=m
-
-##
-## file: drivers/media/rc/keymaps/Kconfig
-##
-CONFIG_RC_MAP=m
 
 ##
 ## file: drivers/media/common/tuners/Kconfig
@@ -1076,6 +1034,28 @@ CONFIG_USB_SI470X=m
 CONFIG_I2C_SI470X=y
 
 ##
+## file: drivers/media/rc/Kconfig
+##
+CONFIG_RC_CORE=m
+CONFIG_IR_NEC_DECODER=m
+CONFIG_IR_RC5_DECODER=m
+CONFIG_IR_RC6_DECODER=m
+CONFIG_IR_JVC_DECODER=m
+CONFIG_IR_SONY_DECODER=m
+CONFIG_IR_RC5_SZ_DECODER=m
+CONFIG_IR_LIRC_CODEC=m
+CONFIG_IR_ENE=m
+CONFIG_IR_IMON=m
+CONFIG_IR_MCEUSB=m
+# CONFIG_IR_NUVOTON is not set
+CONFIG_IR_STREAMZAP=m
+
+##
+## file: drivers/media/rc/keymaps/Kconfig
+##
+CONFIG_RC_MAP=m
+
+##
 ## file: drivers/media/video/Kconfig
 ##
 CONFIG_VIDEO_CAPTURE_DRIVERS=y
@@ -1085,7 +1065,6 @@ CONFIG_VIDEO_HELPER_CHIPS_AUTO=y
 CONFIG_VIDEO_TVAUDIO=m
 CONFIG_VIDEO_TDA7432=m
 CONFIG_VIDEO_TDA9840=m
-CONFIG_VIDEO_TDA9875=m
 CONFIG_VIDEO_TEA6415C=m
 CONFIG_VIDEO_TEA6420=m
 CONFIG_VIDEO_MSP3400=m
@@ -1132,7 +1111,6 @@ CONFIG_SOC_CAMERA_OV772X=m
 CONFIG_SOC_CAMERA_OV9640=m
 CONFIG_VIDEO_SH_MOBILE_CEU=m
 CONFIG_V4L_USB_DRIVERS=y
-CONFIG_USB_SE401=m
 CONFIG_USB_ZR364XX=m
 CONFIG_USB_STKWEBCAM=m
 CONFIG_USB_S2255=m
@@ -1306,13 +1284,6 @@ CONFIG_USB_SN9C102=m
 CONFIG_VIDEO_TLG2300=m
 
 ##
-## file: drivers/media/video/usbvideo/Kconfig
-##
-CONFIG_USB_VICAM=m
-CONFIG_USB_IBMCAM=m
-CONFIG_USB_KONICAWC=m
-
-##
 ## file: drivers/media/video/usbvision/Kconfig
 ##
 CONFIG_VIDEO_USBVISION=m
@@ -1450,6 +1421,11 @@ CONFIG_EEPROM_93CX6=m
 # CONFIG_IWMC3200TOP_DEBUGFS is not set
 
 ##
+## file: drivers/misc/lis3lv02d/Kconfig
+##
+CONFIG_SENSORS_LIS3_I2C=m
+
+##
 ## file: drivers/mmc/card/Kconfig
 ##
 CONFIG_MMC_BLOCK_MINORS=8
@@ -1541,10 +1517,6 @@ CONFIG_MTD_UBI=m
 CONFIG_MTD_UBI_WL_THRESHOLD=4096
 CONFIG_MTD_UBI_BEB_RESERVE=1
 # CONFIG_MTD_UBI_GLUEBI is not set
-
-##
-## file: drivers/mtd/ubi/Kconfig.debug
-##
 # CONFIG_MTD_UBI_DEBUG is not set
 
 ##
@@ -1591,7 +1563,6 @@ CONFIG_NS83820=m
 CONFIG_HAMACHI=m
 CONFIG_YELLOWFIN=m
 CONFIG_R8169=m
-CONFIG_R8169_VLAN=y
 CONFIG_SIS190=m
 CONFIG_SKGE=m
 # CONFIG_SKGE_DEBUG is not set
@@ -1930,7 +1901,6 @@ CONFIG_IPW2200_QOS=y
 ##
 ## file: drivers/net/wireless/iwlegacy/Kconfig
 ##
-CONFIG_IWLWIFI_LEGACY=m
 # CONFIG_IWLWIFI_LEGACY_DEBUG is not set
 # CONFIG_IWLWIFI_LEGACY_DEVICE_TRACING is not set
 CONFIG_IWL4965=m
@@ -1986,12 +1956,10 @@ CONFIG_RT2400PCI=m
 CONFIG_RT2500PCI=m
 CONFIG_RT61PCI=m
 CONFIG_RT2800PCI=m
-CONFIG_RT2800PCI_RT30XX=y
 # CONFIG_RT2800PCI_RT35XX is not set
 CONFIG_RT2500USB=m
 CONFIG_RT73USB=m
 CONFIG_RT2800USB=m
-CONFIG_RT2800USB_RT30XX=y
 # CONFIG_RT2800USB_RT35XX is not set
 # CONFIG_RT2800USB_UNKNOWN is not set
 # CONFIG_RT2X00_DEBUG is not set
@@ -2006,7 +1974,6 @@ CONFIG_RTL8187=m
 ## file: drivers/net/wireless/rtlwifi/Kconfig
 ##
 CONFIG_RTL8192CE=m
-CONFIG_RTLWIFI=m
 
 ##
 ## file: drivers/net/wireless/wl1251/Kconfig
@@ -2019,9 +1986,6 @@ CONFIG_WL1251_SDIO=m
 ## file: drivers/net/wireless/wl12xx/Kconfig
 ##
 CONFIG_WL12XX=m
-CONFIG_WL1271=m
-CONFIG_WL1271_SPI=m
-CONFIG_WL1271_SDIO=m
 
 ##
 ## file: drivers/net/wireless/zd1211rw/Kconfig
@@ -2095,6 +2059,7 @@ CONFIG_PANASONIC_LAPTOP=m
 CONFIG_COMPAL_LAPTOP=m
 CONFIG_SONY_LAPTOP=m
 # CONFIG_RAR_REGISTER is not set
+# CONFIG_SAMSUNG_LAPTOP is not set
 
 ##
 ## file: drivers/pnp/Kconfig
@@ -2323,7 +2288,6 @@ CONFIG_SCSI_DH_ALUA=m
 CONFIG_SCSI_SAS_LIBSAS=m
 CONFIG_SCSI_SAS_ATA=y
 CONFIG_SCSI_SAS_HOST_SMP=y
-# CONFIG_SCSI_SAS_LIBSAS_DEBUG is not set
 
 ##
 ## file: drivers/scsi/megaraid/Kconfig.megaraid
@@ -2367,22 +2331,6 @@ CONFIG_SCSI_QLA_FC=m
 CONFIG_SCSI_QLA_ISCSI=m
 
 ##
-## file: drivers/serial/Kconfig
-##
-CONFIG_SERIAL_8250_PCI=y
-CONFIG_SERIAL_8250_PNP=y
-CONFIG_SERIAL_8250_FOURPORT=m
-CONFIG_SERIAL_8250_ACCENT=m
-CONFIG_SERIAL_8250_BOCA=m
-CONFIG_SERIAL_8250_HUB6=m
-CONFIG_SERIAL_8250_MCA=m
-CONFIG_SERIAL_MAX3100=m
-CONFIG_SERIAL_MFD_HSU=m
-# CONFIG_SERIAL_TIMBERDALE is not set
-# CONFIG_SERIAL_ALTERA_JTAGUART is not set
-# CONFIG_SERIAL_ALTERA_UART is not set
-
-##
 ## file: drivers/spi/Kconfig
 ##
 CONFIG_SPI=y
@@ -2415,21 +2363,9 @@ CONFIG_STAGING=y
 # CONFIG_ASUS_OLED is not set
 
 ##
-## file: drivers/staging/autofs/Kconfig
-##
-CONFIG_AUTOFS_FS=m
-
-##
 ## file: drivers/staging/comedi/Kconfig
 ##
 # CONFIG_COMEDI is not set
-
-##
-## file: drivers/staging/cpia/Kconfig
-##
-CONFIG_VIDEO_CPIA=m
-CONFIG_VIDEO_CPIA_PP=m
-CONFIG_VIDEO_CPIA_USB=m
 
 ##
 ## file: drivers/staging/crystalhd/Kconfig
@@ -2512,11 +2448,6 @@ CONFIG_VIDEO_CPIA_USB=m
 # CONFIG_RTL8192E is not set
 
 ##
-## file: drivers/staging/samsung-laptop/Kconfig
-##
-# CONFIG_SAMSUNG_LAPTOP is not set
-
-##
 ## file: drivers/staging/serqt_usb2/Kconfig
 ##
 # CONFIG_USB_SERIAL_QUATECH2 is not set
@@ -2530,11 +2461,6 @@ CONFIG_VIDEO_CPIA_USB=m
 ## file: drivers/staging/sm7xx/Kconfig
 ##
 # CONFIG_FB_SM7XX is not set
-
-##
-## file: drivers/staging/smbfs/Kconfig
-##
-# CONFIG_SMB_FS is not set
 
 ##
 ## file: drivers/staging/speakup/Kconfig
@@ -2556,14 +2482,12 @@ CONFIG_SPEAKUP_SYNTH_TXPRT=m
 CONFIG_SPEAKUP_SYNTH_DUMMY=m
 
 ##
-## file: drivers/staging/stradis/Kconfig
+## file: drivers/staging/tty/Kconfig
 ##
-CONFIG_VIDEO_STRADIS=m
-
-##
-## file: drivers/staging/udlfb/Kconfig
-##
-# CONFIG_FB_UDL is not set
+# CONFIG_STALLION is not set
+# CONFIG_ISTALLION is not set
+CONFIG_RISCOM8=m
+CONFIG_COMPUTONE=m
 
 ##
 ## file: drivers/staging/usbip/Kconfig
@@ -2602,6 +2526,34 @@ CONFIG_TARGET_CORE=m
 CONFIG_TCM_IBLOCK=m
 CONFIG_TCM_FILEIO=m
 CONFIG_TCM_PSCSI=m
+
+##
+## file: drivers/tty/Kconfig
+##
+CONFIG_VT_HW_CONSOLE_BINDING=y
+CONFIG_UNIX98_PTYS=y
+CONFIG_DEVPTS_MULTIPLE_INSTANCES=y
+# CONFIG_LEGACY_PTYS is not set
+CONFIG_MOXA_SMARTIO=m
+CONFIG_SYNCLINK_GT=m
+CONFIG_NOZOMI=m
+CONFIG_N_GSM=m
+
+##
+## file: drivers/tty/serial/Kconfig
+##
+CONFIG_SERIAL_8250_PCI=y
+CONFIG_SERIAL_8250_PNP=y
+CONFIG_SERIAL_8250_FOURPORT=m
+CONFIG_SERIAL_8250_ACCENT=m
+CONFIG_SERIAL_8250_BOCA=m
+CONFIG_SERIAL_8250_HUB6=m
+CONFIG_SERIAL_8250_MCA=m
+CONFIG_SERIAL_MAX3100=m
+CONFIG_SERIAL_MFD_HSU=m
+# CONFIG_SERIAL_TIMBERDALE is not set
+# CONFIG_SERIAL_ALTERA_JTAGUART is not set
+# CONFIG_SERIAL_ALTERA_UART is not set
 
 ##
 ## file: drivers/uio/Kconfig
@@ -2827,6 +2779,7 @@ CONFIG_FB_PM3=m
 # CONFIG_FB_CARMINE is not set
 # CONFIG_FB_TMIO is not set
 CONFIG_FB_SM501=m
+# CONFIG_FB_UDL is not set
 CONFIG_FB_METRONOME=m
 CONFIG_FB_MB862XX=m
 CONFIG_FB_MB862XX_PCI_GDC=y
@@ -2839,7 +2792,6 @@ CONFIG_BACKLIGHT_LCD_SUPPORT=y
 # CONFIG_LCD_CLASS_DEVICE is not set
 CONFIG_BACKLIGHT_CLASS_DEVICE=y
 # CONFIG_BACKLIGHT_GENERIC is not set
-CONFIG_BACKLIGHT_MBP_NVIDIA=m
 # CONFIG_BACKLIGHT_SAHARA is not set
 CONFIG_BACKLIGHT_WM831X=m
 
@@ -2938,25 +2890,6 @@ CONFIG_AFFS_FS=m
 CONFIG_AFS_FS=m
 # CONFIG_AFS_DEBUG is not set
 CONFIG_AFS_FSCACHE=y
-
-##
-## file: fs/aufs/Kconfig
-##
-CONFIG_AUFS_FS=m
-## choice: Maximum number of branches
-CONFIG_AUFS_BRANCH_MAX_127=y
-# CONFIG_AUFS_BRANCH_MAX_511 is not set
-# CONFIG_AUFS_BRANCH_MAX_1023 is not set
-# CONFIG_AUFS_BRANCH_MAX_32767 is not set
-## end choice
-# CONFIG_AUFS_HNOTIFY is not set
-# CONFIG_AUFS_EXPORT is not set
-# CONFIG_AUFS_RDU is not set
-# CONFIG_AUFS_SP_IATTR is not set
-# CONFIG_AUFS_SHWH is not set
-# CONFIG_AUFS_BR_RAMFS is not set
-# CONFIG_AUFS_BR_FUSE is not set
-# CONFIG_AUFS_DEBUG is not set
 
 ##
 ## file: fs/autofs4/Kconfig
@@ -3416,7 +3349,6 @@ CONFIG_XFS_RT=y
 ## file: init/Kconfig
 ##
 CONFIG_EXPERIMENTAL=y
-# CONFIG_LOCK_KERNEL is not set
 CONFIG_LOCALVERSION=""
 # CONFIG_LOCALVERSION_AUTO is not set
 ## choice: Kernel compression mode
@@ -3471,7 +3403,6 @@ CONFIG_SCHED_AUTOGROUP=y
 CONFIG_RELAY=y
 CONFIG_BLK_DEV_INITRD=y
 CONFIG_CC_OPTIMIZE_FOR_SIZE=y
-# CONFIG_EMBEDDED is not set
 CONFIG_SYSCTL_SYSCALL=y
 CONFIG_KALLSYMS=y
 # CONFIG_KALLSYMS_ALL is not set
@@ -3485,6 +3416,7 @@ CONFIG_SIGNALFD=y
 CONFIG_TIMERFD=y
 CONFIG_EVENTFD=y
 CONFIG_SHMEM=y
+# CONFIG_EMBEDDED is not set
 CONFIG_PERF_EVENTS=y
 #. Compatibility setting
 # CONFIG_PERF_COUNTERS is not set
@@ -3522,14 +3454,13 @@ CONFIG_HZ_250=y
 ##
 ## file: kernel/power/Kconfig
 ##
-CONFIG_PM=y
-CONFIG_PM_DEBUG=y
-CONFIG_PM_ADVANCED_DEBUG=y
-# CONFIG_PM_VERBOSE is not set
 CONFIG_SUSPEND=y
 CONFIG_HIBERNATION=y
 CONFIG_PM_STD_PARTITION=""
 CONFIG_PM_RUNTIME=y
+CONFIG_PM_DEBUG=y
+# CONFIG_PM_VERBOSE is not set
+CONFIG_PM_ADVANCED_DEBUG=y
 
 ##
 ## file: kernel/Kconfig.preempt
@@ -3602,7 +3533,6 @@ CONFIG_TIMER_STATS=y
 # CONFIG_RT_MUTEX_TESTER is not set
 # CONFIG_DEBUG_SPINLOCK is not set
 # CONFIG_DEBUG_MUTEXES is not set
-# CONFIG_BKL is not set
 # CONFIG_DEBUG_LOCK_ALLOC is not set
 # CONFIG_PROVE_LOCKING is not set
 # CONFIG_SPARSE_RCU_POINTER is not set
@@ -3815,10 +3745,6 @@ CONFIG_IEEE802154=m
 ##
 CONFIG_IP_MULTICAST=y
 CONFIG_IP_ADVANCED_ROUTER=y
-## choice: Choose IP: FIB lookup algorithm (choose FIB_HASH if unsure)
-CONFIG_ASK_IP_FIB_HASH=y
-# CONFIG_IP_FIB_TRIE is not set
-## end choice
 CONFIG_IP_MULTIPLE_TABLES=y
 CONFIG_IP_ROUTE_MULTIPATH=y
 CONFIG_IP_ROUTE_VERBOSE=y
@@ -3871,7 +3797,6 @@ CONFIG_NF_CONNTRACK_IPV4=m
 CONFIG_NF_CONNTRACK_PROC_COMPAT=y
 CONFIG_IP_NF_QUEUE=m
 CONFIG_IP_NF_IPTABLES=m
-CONFIG_IP_NF_MATCH_ADDRTYPE=m
 CONFIG_IP_NF_MATCH_AH=m
 CONFIG_IP_NF_MATCH_ECN=m
 CONFIG_IP_NF_MATCH_TTL=m
@@ -4095,7 +4020,6 @@ CONFIG_PACKET=y
 ## file: net/phonet/Kconfig
 ##
 CONFIG_PHONET=m
-# CONFIG_PHONET_PIPECTRLR is not set
 
 ##
 ## file: net/rds/Kconfig
@@ -4191,9 +4115,6 @@ CONFIG_RPCSEC_GSS_KRB5=m
 ##
 CONFIG_TIPC=m
 CONFIG_TIPC_ADVANCED=y
-CONFIG_TIPC_ZONES=3
-CONFIG_TIPC_CLUSTERS=1
-CONFIG_TIPC_NODES=255
 CONFIG_TIPC_PORTS=8191
 CONFIG_TIPC_LOG=0
 # CONFIG_TIPC_DEBUG is not set
@@ -4352,7 +4273,6 @@ CONFIG_SND_INDIGOIOX=m
 CONFIG_SND_INDIGODJX=m
 CONFIG_SND_ES1968_INPUT=y
 CONFIG_SND_HDSPM=m
-CONFIG_SND_HIFIER=m
 CONFIG_SND_LX6464ES=m
 CONFIG_SND_MAESTRO3_INPUT=y
 CONFIG_SND_PCXHR=m
@@ -4424,6 +4344,7 @@ CONFIG_INITRAMFS_SOURCE=""
 # CONFIG_ANDROID_LOGGER is not set
 # CONFIG_ANDROID_LOW_MEMORY_KILLER is not set
 # CONFIG_ANDROID_RAM_CONSOLE is not set
+CONFIG_ASK_IP_FIB_HASH=y
 # CONFIG_ATH9K_DEBUG is not set
 # CONFIG_AUFS_BRANCH_MAX_1023 is not set
 CONFIG_AUFS_BRANCH_MAX_127=y
@@ -4435,51 +4356,86 @@ CONFIG_AUFS_BRANCH_MAX_127=y
 # CONFIG_AUFS_EXPORT is not set
 CONFIG_AUFS_FS=m
 # CONFIG_AUFS_HINOTIFY is not set
+# CONFIG_AUFS_HNOTIFY is not set
 # CONFIG_AUFS_RDU is not set
 # CONFIG_AUFS_SHWH is not set
 # CONFIG_AUFS_SP_IATTR is not set
+CONFIG_AUTOFS_FS=m
 # CONFIG_B3DFG is not set
+CONFIG_BACKLIGHT_MBP_NVIDIA=m
+# CONFIG_BKL is not set
 CONFIG_BT_L2CAP_EXT_FEATURES=y
+CONFIG_DAB=y
 # CONFIG_DEBUG_CFQ_IOSCHED is not set
 # CONFIG_DEFAULT_AS is not set
 # CONFIG_DST is not set
 # CONFIG_DT3155 is not set
 CONFIG_DVB_LGDT3304=m
 # CONFIG_FORCEDETH_NAPI is not set
+CONFIG_HID_EGALAX=m
 # CONFIG_HW_BRANCH_TRACER is not set
 CONFIG_INOTIFY=y
 # CONFIG_INPUT_GPIO is not set
 # CONFIG_INPUT_MIMIO is not set
+CONFIG_INPUT_WINBOND_CIR=m
 CONFIG_IP_DCCP_CCID3_RTO=100
+# CONFIG_IP_FIB_TRIE is not set
+CONFIG_IP_NF_MATCH_ADDRTYPE=m
 CONFIG_IWL3945_SPECTRUM_MEASUREMENT=y
 CONFIG_IWLWIFI_LEDS=y
 CONFIG_IWLWIFI_SPECTRUM_MEASUREMENT=y
 # CONFIG_KMEMTRACE is not set
 CONFIG_LBD=y
+# CONFIG_LOCK_KERNEL is not set
 # CONFIG_MAC80211_DEBUG_PACKET_ALIGNMENT is not set
 CONFIG_MAGIC_SYSRQ_DEFAULT_MASK=0x01b6
 # CONFIG_NETFILTER_XT_MATCH_RECENT_PROC_COMPAT is not set
 # CONFIG_OTUS is not set
 CONFIG_PCI_LEGACY=y
 # CONFIG_PCMCIA_IOCTL is not set
+# CONFIG_PHONET_PIPECTRLR is not set
 # CONFIG_PLAN9AUTH is not set
 # CONFIG_POCH is not set
 # CONFIG_POWER_TRACER is not set
 CONFIG_QT2160=m
+CONFIG_R8169_VLAN=y
 CONFIG_RPCSEC_GSS_SPKM3=m
+CONFIG_RT2800PCI_RT30XX=y
+CONFIG_RT2800USB_RT30XX=y
 # CONFIG_RTL8187SE is not set
+# CONFIG_SCSI_SAS_LIBSAS_DEBUG is not set
 CONFIG_SECURITY_FILE_CAPABILITIES=y
 # CONFIG_SECURITY_ROOTPLUG is not set
 CONFIG_SENSORS_ADT7473=m
 # CONFIG_SLOW_WORK_DEBUG is not set
+# CONFIG_SMB_FS is not set
+CONFIG_SND_HIFIER=m
 # CONFIG_SYSPROF_TRACER is not set
+CONFIG_TIPC_CLUSTERS=1
+CONFIG_TIPC_NODES=255
 CONFIG_TIPC_SLAVE_NODES=0
+CONFIG_TIPC_ZONES=3
+CONFIG_USB_DABUSB=m
+CONFIG_USB_IBMCAM=m
+CONFIG_USB_KONICAWC=m
 # CONFIG_USB_OV511 is not set
 # CONFIG_USB_QUICKCAM_MESSENGER is not set
+CONFIG_USB_SE401=m
+CONFIG_USB_VICAM=m
 CONFIG_UWB_I1480U_WLP=m
 CONFIG_UWB_WLP=m
+CONFIG_VIDEO_ALLOW_V4L1=y
+CONFIG_VIDEO_CPIA=m
+CONFIG_VIDEO_CPIA_PP=m
+CONFIG_VIDEO_CPIA_USB=m
 CONFIG_VIDEO_SAA5246A=m
 CONFIG_VIDEO_SAA5249=m
+CONFIG_VIDEO_STRADIS=m
+CONFIG_VIDEO_TDA9875=m
+CONFIG_VIDEO_V4L1_COMPAT=y
 CONFIG_WIRELESS_OLD_REGULATORY=y
+CONFIG_WL1271=m
+CONFIG_WL1271_SDIO=m
+CONFIG_WL1271_SPI=m
 # CONFIG_WORKQUEUE_TRACER is not set
 
