--- a/linux-2.6/debian/config/hppa/config
+++ b/linux-2.6/debian/config/hppa/config
@@ -42,9 +42,6 @@ CONFIG_CDROM_PKTCDVD_BUFFERS=8
 ##
 ## file: drivers/char/Kconfig
 ##
-CONFIG_VT=y
-CONFIG_VT_CONSOLE=y
-# CONFIG_SERIAL_NONSTANDARD is not set
 CONFIG_PRINTER=m
 # CONFIG_LP_CONSOLE is not set
 # CONFIG_PPDEV is not set
@@ -463,7 +460,19 @@ CONFIG_PCMCIA_QLOGIC=m
 CONFIG_PCMCIA_SYM53C500=m
 
 ##
-## file: drivers/serial/Kconfig
+## file: drivers/telephony/Kconfig
+##
+# CONFIG_PHONE is not set
+
+##
+## file: drivers/tty/Kconfig
+##
+CONFIG_VT=y
+CONFIG_VT_CONSOLE=y
+# CONFIG_SERIAL_NONSTANDARD is not set
+
+##
+## file: drivers/tty/serial/Kconfig
 ##
 CONFIG_SERIAL_8250=y
 CONFIG_SERIAL_8250_CONSOLE=y
@@ -478,11 +487,6 @@ CONFIG_SERIAL_8250_SHARE_IRQ=y
 CONFIG_SERIAL_MUX=y
 CONFIG_SERIAL_MUX_CONSOLE=y
 CONFIG_SERIAL_JSM=m
-
-##
-## file: drivers/telephony/Kconfig
-##
-# CONFIG_PHONE is not set
 
 ##
 ## file: drivers/usb/Kconfig
