--- a/linux-2.6/debian/config/kernelarch-x86/config
+++ b/linux-2.6/debian/config/kernelarch-x86/config
@@ -132,8 +132,8 @@ CONFIG_ACPI_VIDEO=m
 CONFIG_ACPI_FAN=m
 CONFIG_ACPI_DOCK=y
 CONFIG_ACPI_PROCESSOR=m
-CONFIG_ACPI_PROCESSOR_AGGREGATOR=m
 CONFIG_ACPI_IPMI=m
+CONFIG_ACPI_PROCESSOR_AGGREGATOR=m
 CONFIG_ACPI_THERMAL=m
 # CONFIG_ACPI_DEBUG is not set
 CONFIG_ACPI_PCI_SLOT=m
@@ -266,21 +266,10 @@ CONFIG_BT_HCIVHCI=m
 ##
 ## file: drivers/char/Kconfig
 ##
-CONFIG_VT=y
-CONFIG_VT_CONSOLE=y
-CONFIG_SERIAL_NONSTANDARD=y
-CONFIG_ROCKETPORT=m
-CONFIG_CYCLADES=m
-# CONFIG_CYZ_INTR is not set
-CONFIG_SYNCLINK=m
-CONFIG_SYNCLINKMP=m
-CONFIG_N_HDLC=m
-CONFIG_SX=m
 CONFIG_STALDRV=y
 CONFIG_PRINTER=m
 # CONFIG_LP_CONSOLE is not set
 CONFIG_PPDEV=m
-CONFIG_HVC_XEN=y
 CONFIG_NVRAM=m
 CONFIG_DTLK=m
 CONFIG_R3964=m
@@ -394,10 +383,7 @@ CONFIG_DRM_TDFX=m
 CONFIG_DRM_R128=m
 CONFIG_DRM_RADEON=m
 # CONFIG_DRM_I810 is not set
-## choice: Intel 830M, 845G, 852GM, 855GM, 865G
-# CONFIG_DRM_I830 is not set
 CONFIG_DRM_I915=m
-## end choice
 CONFIG_DRM_I915_KMS=y
 CONFIG_DRM_MGA=m
 CONFIG_DRM_SIS=m
@@ -539,11 +525,6 @@ CONFIG_BLK_DEV_TRM290=m
 # CONFIG_INTEL_IDLE is not set
 
 ##
-## file: drivers/input/Kconfig
-##
-CONFIG_XEN_KBDDEV_FRONTEND=y
-
-##
 ## file: drivers/input/gameport/Kconfig
 ##
 CONFIG_GAMEPORT=m
@@ -663,7 +644,6 @@ CONFIG_DVB_CORE=m
 ##
 ## file: drivers/media/radio/Kconfig
 ##
-CONFIG_RADIO_GEMTEK_PCI=m
 CONFIG_RADIO_MAXIRADIO=m
 CONFIG_RADIO_MAESTRO=m
 CONFIG_USB_DSBR=m
@@ -707,7 +687,6 @@ CONFIG_MMC_BLOCK=m
 ##
 CONFIG_MTD=m
 # CONFIG_MTD_DEBUG is not set
-CONFIG_MTD_CONCAT=m
 CONFIG_MTD_PARTITIONS=y
 CONFIG_MTD_REDBOOT_PARTS=y
 CONFIG_MTD_REDBOOT_DIRECTORY_BLOCK=-1
@@ -995,6 +974,7 @@ CONFIG_ACPI_TOSHIBA=m
 CONFIG_TOSHIBA_BT_RFKILL=m
 CONFIG_ACPI_CMPC=m
 CONFIG_INTEL_IPS=m
+CONFIG_SAMSUNG_LAPTOP=m
 
 ##
 ## file: drivers/pnp/Kconfig
@@ -1062,21 +1042,6 @@ CONFIG_PCMCIA_QLOGIC=m
 CONFIG_PCMCIA_SYM53C500=m
 
 ##
-## file: drivers/serial/Kconfig
-##
-CONFIG_SERIAL_8250=y
-CONFIG_SERIAL_8250_CONSOLE=y
-CONFIG_SERIAL_8250_CS=m
-CONFIG_SERIAL_8250_NR_UARTS=32
-CONFIG_SERIAL_8250_RUNTIME_UARTS=4
-CONFIG_SERIAL_8250_EXTENDED=y
-CONFIG_SERIAL_8250_MANY_PORTS=y
-CONFIG_SERIAL_8250_SHARE_IRQ=y
-# CONFIG_SERIAL_8250_DETECT_IRQ is not set
-CONFIG_SERIAL_8250_RSA=y
-CONFIG_SERIAL_JSM=m
-
-##
 ## file: drivers/sfi/Kconfig
 ##
 CONFIG_SFI=y
@@ -1109,15 +1074,17 @@ CONFIG_ET131X=m
 # CONFIG_ET131X_DEBUG is not set
 
 ##
+## file: drivers/staging/generic_serial/Kconfig
+##
+CONFIG_SX=m
+
+##
 ## file: drivers/staging/lirc/Kconfig
 ##
 CONFIG_LIRC_STAGING=y
 CONFIG_LIRC_BT829=m
-CONFIG_LIRC_I2C=m
 CONFIG_LIRC_IGORPLUGUSB=m
 CONFIG_LIRC_IMON=m
-CONFIG_LIRC_IT87=m
-CONFIG_LIRC_ITE8709=m
 CONFIG_LIRC_SASEM=m
 CONFIG_LIRC_SERIAL=m
 CONFIG_LIRC_SERIAL_TRANSMITTER=y
@@ -1151,11 +1118,6 @@ CONFIG_RTL8192U=m
 ## file: drivers/staging/rtl8712/Kconfig
 ##
 CONFIG_R8712U=m
-
-##
-## file: drivers/staging/samsung-laptop/Kconfig
-##
-CONFIG_SAMSUNG_LAPTOP=m
 
 ##
 ## file: drivers/staging/tm6000/Kconfig
@@ -1201,6 +1163,39 @@ CONFIG_THERMAL=m
 CONFIG_THERMAL_HWMON=y
 
 ##
+## file: drivers/tty/Kconfig
+##
+CONFIG_VT=y
+CONFIG_VT_CONSOLE=y
+CONFIG_SERIAL_NONSTANDARD=y
+CONFIG_ROCKETPORT=m
+CONFIG_CYCLADES=m
+# CONFIG_CYZ_INTR is not set
+CONFIG_SYNCLINK=m
+CONFIG_SYNCLINKMP=m
+CONFIG_N_HDLC=m
+
+##
+## file: drivers/tty/hvc/Kconfig
+##
+CONFIG_HVC_XEN=y
+
+##
+## file: drivers/tty/serial/Kconfig
+##
+CONFIG_SERIAL_8250=y
+CONFIG_SERIAL_8250_CONSOLE=y
+CONFIG_SERIAL_8250_CS=m
+CONFIG_SERIAL_8250_NR_UARTS=32
+CONFIG_SERIAL_8250_RUNTIME_UARTS=4
+CONFIG_SERIAL_8250_EXTENDED=y
+CONFIG_SERIAL_8250_MANY_PORTS=y
+CONFIG_SERIAL_8250_SHARE_IRQ=y
+# CONFIG_SERIAL_8250_DETECT_IRQ is not set
+CONFIG_SERIAL_8250_RSA=y
+CONFIG_SERIAL_JSM=m
+
+##
 ## file: drivers/usb/Kconfig
 ##
 CONFIG_USB=m
@@ -1242,7 +1237,6 @@ CONFIG_FB_VESA=y
 CONFIG_FB_EFI=y
 CONFIG_FB_N411=m
 CONFIG_FB_HGA=m
-# CONFIG_FB_HGA_ACCEL is not set
 CONFIG_FB_S1D13XXX=m
 CONFIG_FB_NVIDIA=m
 CONFIG_FB_NVIDIA_BACKLIGHT=y
@@ -1370,8 +1364,8 @@ CONFIG_SPARSE_IRQ=y
 ##
 ## file: kernel/power/Kconfig
 ##
-# CONFIG_PM_TRACE_RTC is not set
 # CONFIG_PM_TEST_SUSPEND is not set
+# CONFIG_PM_TRACE_RTC is not set
 
 ##
 ## file: kernel/trace/Kconfig
@@ -1390,7 +1384,9 @@ CONFIG_SPARSE_IRQ=y
 ##
 CONFIG_DEFAULT_MMAP_MIN_ADDR=65536
 CONFIG_TRANSPARENT_HUGEPAGE=y
+## choice: Transparent Hugepage Support sysfs defaults
 CONFIG_TRANSPARENT_HUGEPAGE_MADVISE=y
+## end choice
 
 ##
 ## file: mm/Kconfig.debug
@@ -1531,4 +1527,16 @@ CONFIG_SND_YMFPCI=m
 ## file: sound/pci/hda/Kconfig
 ##
 CONFIG_SND_HDA_INTEL=m
+
+##
+## file: unknown
+##
+# CONFIG_DRM_I830 is not set
+# CONFIG_FB_HGA_ACCEL is not set
+CONFIG_LIRC_I2C=m
+CONFIG_LIRC_IT87=m
+CONFIG_LIRC_ITE8709=m
+CONFIG_MTD_CONCAT=m
+CONFIG_RADIO_GEMTEK_PCI=m
+CONFIG_XEN_KBDDEV_FRONTEND=y
 
