--- a/linux-2.6/debian/config/m68k/config
+++ b/linux-2.6/debian/config/m68k/config
@@ -1,5 +1,5 @@
 ##
-## file: arch/m68k/Kconfig
+## file: arch/m68k/Kconfig.mmu
 ##
 # CONFIG_ADVANCED is not set
 CONFIG_PROC_HARDWARE=y
@@ -15,9 +15,6 @@ CONFIG_BLK_DEV_RAM_SIZE=4096
 ##
 ## file: drivers/char/Kconfig
 ##
-CONFIG_VT=y
-CONFIG_VT_CONSOLE=y
-# CONFIG_SERIAL_NONSTANDARD is not set
 CONFIG_GEN_RTC_X=y
 # CONFIG_DTLK is not set
 
@@ -123,11 +120,6 @@ CONFIG_BLK_DEV_SD=y
 # CONFIG_ISCSI_TCP is not set
 
 ##
-## file: drivers/serial/Kconfig
-##
-CONFIG_SERIAL_8250_RUNTIME_UARTS=4
-
-##
 ## file: drivers/staging/Kconfig
 ##
 # CONFIG_STAGING is not set
@@ -136,6 +128,18 @@ CONFIG_SERIAL_8250_RUNTIME_UARTS=4
 ## file: drivers/telephony/Kconfig
 ##
 # CONFIG_PHONE is not set
+
+##
+## file: drivers/tty/Kconfig
+##
+CONFIG_VT=y
+CONFIG_VT_CONSOLE=y
+# CONFIG_SERIAL_NONSTANDARD is not set
+
+##
+## file: drivers/tty/serial/Kconfig
+##
+CONFIG_SERIAL_8250_RUNTIME_UARTS=4
 
 ##
 ## file: drivers/w1/Kconfig
