--- a/linux-2.6/debian/config/s390/config
+++ b/linux-2.6/debian/config/s390/config
@@ -10,7 +10,6 @@ CONFIG_S390_EXEC_PROTECT=y
 CONFIG_PACK_STACK=y
 # CONFIG_SMALL_STACK is not set
 # CONFIG_CHECK_STACK is not set
-# CONFIG_WARN_STACK is not set
 CONFIG_QDIO=y
 CONFIG_IPL=y
 CONFIG_PFAULT=y
@@ -38,11 +37,6 @@ CONFIG_KVM=m
 ##
 CONFIG_BLK_DEV_RAM_SIZE=24576
 # CONFIG_CDROM_PKTCDVD is not set
-
-##
-## file: drivers/char/Kconfig
-##
-CONFIG_HVC_IUCV=y
 
 ##
 ## file: drivers/crypto/Kconfig
@@ -131,6 +125,11 @@ CONFIG_QETH_L3=m
 CONFIG_ZFCP=m
 
 ##
+## file: drivers/tty/hvc/Kconfig
+##
+CONFIG_HVC_IUCV=y
+
+##
 ## file: drivers/watchdog/Kconfig
 ##
 CONFIG_ZVM_WATCHDOG=m
@@ -190,4 +189,9 @@ CONFIG_AFIUCV=m
 ## file: net/wanrouter/Kconfig
 ##
 # CONFIG_WAN_ROUTER is not set
+
+##
+## file: unknown
+##
+# CONFIG_WARN_STACK is not set
 
