catch up with wirless renaming s/WL1271/WL12XX/
git-svn-id: svn://svn.debian.org/svn/kernel/dists/trunk@17336 510b9475-24dd-0310-9b6c-e0eefe99d49f

--- a/linux-2.6/debian/config/config
+++ b/linux-2.6/debian/config/config
@@ -1985,7 +1985,10 @@ CONFIG_WL1251_SDIO=m
 ##
 ## file: drivers/net/wireless/wl12xx/Kconfig
 ##
+CONFIG_WL12XX_MENU=m
 CONFIG_WL12XX=m
+CONFIG_WL12XX_SPI=m
+CONFIG_WL12XX_SDIO=m
 
 ##
 ## file: drivers/net/wireless/zd1211rw/Kconfig
@@ -4427,8 +4430,5 @@ CONFIG_VIDEO_STRADIS=m
 CONFIG_VIDEO_TDA9875=m
 CONFIG_VIDEO_V4L1_COMPAT=y
 CONFIG_WIRELESS_OLD_REGULATORY=y
-CONFIG_WL1271=m
-CONFIG_WL1271_SDIO=m
-CONFIG_WL1271_SPI=m
 # CONFIG_WORKQUEUE_TRACER is not set
 
