s/ATH9K_DEBUG/ATH9K_DEBUGFS/
see a830df0714117574fd0d5fe98477059b3e9fd5bf

git-svn-id: svn://svn.debian.org/svn/kernel/dists/trunk@17363 510b9475-24dd-0310-9b6c-e0eefe99d49f

--- a/linux-2.6/debian/config/config
+++ b/linux-2.6/debian/config/config
@@ -1854,6 +1854,7 @@ CONFIG_ATH5K=m
 CONFIG_ATH9K=m
 # CONFIG_ATH9K_DEBUGFS is not set
 CONFIG_ATH9K_HTC=m
+# CONFIG_ATH9K_DEBUGFS is not set
 # CONFIG_ATH9K_HTC_DEBUGFS is not set
 
 ##
@@ -4344,7 +4345,6 @@ CONFIG_INITRAMFS_SOURCE=""
 ## file: unknown
 ##
 # CONFIG_ALTERA_PCIE_CHDMA is not set
-# CONFIG_ATH9K_DEBUG is not set
 # CONFIG_AUFS_BRANCH_MAX_1023 is not set
 CONFIG_AUFS_BRANCH_MAX_127=y
 # CONFIG_AUFS_BRANCH_MAX_32767 is not set
