--- a/linux-2.6/debian/config/config
+++ b/linux-2.6/debian/config/config
@@ -112,6 +112,7 @@ CONFIG_SATA_VIA=m
 CONFIG_SATA_VITESSE=m
 # CONFIG_PATA_ALI is not set
 # CONFIG_PATA_AMD is not set
+CONFIG_PATA_ARASAN_CF=m
 CONFIG_PATA_ARTOP=m
 # CONFIG_PATA_ATIIXP is not set
 CONFIG_PATA_ATP867X=m
