topconfig enable modular SATA_ACARD_AHCI
git-svn-id: svn://svn.debian.org/svn/kernel/dists/trunk@17372 510b9475-24dd-0310-9b6c-e0eefe99d49f

--- a/linux-2.6/debian/config/config
+++ b/linux-2.6/debian/config/config
@@ -95,6 +95,7 @@ CONFIG_SATA_AHCI=m
 # CONFIG_SATA_AHCI_PLATFORM is not set
 CONFIG_SATA_INIC162X=m
 CONFIG_SATA_SIL24=m
+CONFIG_SATA_ACARD_AHCI=m
 CONFIG_ATA_SFF=y
 CONFIG_PDC_ADMA=m
 CONFIG_SATA_QSTOR=m
