--- a/linux-2.6/debian/config/config
+++ b/linux-2.6/debian/config/config
@@ -2262,6 +2262,11 @@ CONFIG_SCSI_AIC94XX=m
 # CONFIG_AIC94XX_DEBUG is not set
 
 ##
+## file: drivers/scsi/bnx2fc/Kconfig
+##
+CONFIG_SCSI_BNX2X_FCOE=m
+
+##
 ## file: drivers/scsi/be2iscsi/Kconfig
 ##
 CONFIG_BE2ISCSI=m
