topconfig enable RTL8192CU too
git-svn-id: svn://svn.debian.org/svn/kernel/dists/trunk@17375 510b9475-24dd-0310-9b6c-e0eefe99d49f

--- a/linux-2.6/debian/config/config
+++ b/linux-2.6/debian/config/config
@@ -1979,6 +1979,7 @@ CONFIG_RTL8187=m
 ## file: drivers/net/wireless/rtlwifi/Kconfig
 ##
 CONFIG_RTL8192CE=m
+CONFIG_RTL8192CU=m
 
 ##
 ## file: drivers/net/wireless/wl1251/Kconfig
