Explicitly set CONFIG_NLS=y
It's selected by other options (and has been for a long time).  Making
the change explicit guarantees that kernel-wedge doesn't need to
package it as module.


git-svn-id: svn://svn.debian.org/svn/kernel/dists/trunk@17376 510b9475-24dd-0310-9b6c-e0eefe99d49f

--- a/linux-2.6/debian/config/config
+++ b/linux-2.6/debian/config/config
@@ -3173,7 +3173,7 @@ CONFIG_NILFS2_FS=m
 ##
 ## file: fs/nls/Kconfig
 ##
-CONFIG_NLS=m
+CONFIG_NLS=y
 CONFIG_NLS_DEFAULT="utf8"
 CONFIG_NLS_CODEPAGE_437=m
 CONFIG_NLS_CODEPAGE_737=m
