--- a/linux-2.6/debian/config/kernelarch-x86/config
+++ b/linux-2.6/debian/config/kernelarch-x86/config
@@ -113,6 +113,7 @@ CONFIG_XEN=y
 ##
 ## file: crypto/Kconfig
 ##
+CONFIG_CRYPTO_AES_NI_INTEL=m
 CONFIG_CRYPTO_CRC32C_INTEL=m
 CONFIG_CRYPTO_GHASH_CLMUL_NI_INTEL=m
 
