topconfig enable new SND_USB_6FIRE
needs appropriate firmware too, not sure if it landed yet.

git-svn-id: svn://svn.debian.org/svn/kernel/dists/trunk@17380 510b9475-24dd-0310-9b6c-e0eefe99d49f

--- a/linux-2.6/debian/config/config
+++ b/linux-2.6/debian/config/config
@@ -4346,6 +4346,7 @@ CONFIG_SND_USB_USX2Y=m
 CONFIG_SND_USB_CAIAQ=m
 CONFIG_SND_USB_CAIAQ_INPUT=y
 CONFIG_SND_USB_US122L=m
+CONFIG_SND_USB_6FIRE=m
 
 ##
 ## file: usr/Kconfig
