topconfig enable SND_FIREWIRE_SPEAKERS
driver for playback-only fw devices

git-svn-id: svn://svn.debian.org/svn/kernel/dists/trunk@17381 510b9475-24dd-0310-9b6c-e0eefe99d49f

--- a/linux-2.6/debian/config/config
+++ b/linux-2.6/debian/config/config
@@ -4263,6 +4263,12 @@ CONFIG_SND_AC97_POWER_SAVE=y
 CONFIG_SND_AC97_POWER_SAVE_DEFAULT=0
 
 ##
+## file: sound/firewire/Kconfig
+##
+CONFIG_SND_FIREWIRE=y
+CONFIG_SND_FIREWIRE_SPEAKERS=m
+
+##
 ## file: sound/pci/Kconfig
 ##
 CONFIG_SND_PCI=y
