topconfig enable new subsys MEDIA_CONTROLLER
for details see http://lwn.net/Articles/415714/

git-svn-id: svn://svn.debian.org/svn/kernel/dists/trunk@17382 510b9475-24dd-0310-9b6c-e0eefe99d49f

--- a/linux-2.6/debian/config/config
+++ b/linux-2.6/debian/config/config
@@ -841,6 +841,7 @@ CONFIG_DM_UEVENT=y
 ##
 CONFIG_MEDIA_SUPPORT=m
 CONFIG_VIDEO_DEV=m
+CONFIG_MEDIA_CONTROLLER=y
 
 ##
 ## file: drivers/media/common/tuners/Kconfig
