topconfig enable modular USB_GSPCA_NW80X and USB_GSPCA_VICAM
new NW80X support and vicam v4l1 rewrite

git-svn-id: svn://svn.debian.org/svn/kernel/dists/trunk@17384 510b9475-24dd-0310-9b6c-e0eefe99d49f

--- a/linux-2.6/debian/config/config
+++ b/linux-2.6/debian/config/config
@@ -1194,6 +1194,7 @@ CONFIG_USB_GSPCA_JEILINJ=m
 CONFIG_USB_GSPCA_KONICA=m
 CONFIG_USB_GSPCA_MARS=m
 CONFIG_USB_GSPCA_MR97310A=m
+CONFIG_USB_GSPCA_NW80X=m
 CONFIG_USB_GSPCA_OV519=m
 CONFIG_USB_GSPCA_OV534=m
 CONFIG_USB_GSPCA_OV534_9=m
@@ -1220,6 +1221,7 @@ CONFIG_USB_GSPCA_SUNPLUS=m
 CONFIG_USB_GSPCA_T613=m
 CONFIG_USB_GSPCA_TV8532=m
 CONFIG_USB_GSPCA_VC032X=m
+CONFIG_USB_GSPCA_VICAM=m
 CONFIG_USB_GSPCA_XIRLINK_CIT=m
 CONFIG_USB_GSPCA_ZC3XX=m
 
