topconfig enable modular XEN_NETDEV_BACKEND
acked by waldi.

git-svn-id: svn://svn.debian.org/svn/kernel/dists/trunk@17385 510b9475-24dd-0310-9b6c-e0eefe99d49f

--- a/linux-2.6/debian/config/config
+++ b/linux-2.6/debian/config/config
@@ -1610,6 +1610,7 @@ CONFIG_BNX2X=m
 CONFIG_QLCNIC=m
 CONFIG_QLGE=m
 CONFIG_BNA=m
+CONFIG_XEN_NETDEV_BACKEND=m
 CONFIG_DEFXX=m
 # CONFIG_DEFXX_MMIO is not set
 CONFIG_PPP=m
