topconfig enable also modular xen watchdog
git-svn-id: svn://svn.debian.org/svn/kernel/dists/trunk@17386 510b9475-24dd-0310-9b6c-e0eefe99d49f

--- a/linux-2.6/debian/config/config
+++ b/linux-2.6/debian/config/config
@@ -2874,6 +2874,7 @@ CONFIG_SMSC37B787_WDT=m
 CONFIG_W83697HF_WDT=m
 CONFIG_W83697UG_WDT=m
 CONFIG_SBC_EPX_C3_WATCHDOG=m
+CONFIG_XEN_WDT=m
 
 ##
 ## file: fs/Kconfig
