--- a/linux-2.6/debian/config/kernelarch-x86/config
+++ b/linux-2.6/debian/config/kernelarch-x86/config
@@ -820,6 +820,7 @@ CONFIG_ROADRUNNER=m
 CONFIG_PLIP=m
 CONFIG_NET_FC=y
 # CONFIG_NETPOLL_TRAP is not set
+CONFIG_XEN_NETDEV_BACKEND=m
 
 ##
 ## file: drivers/net/arcnet/Kconfig
