--- a/linux-2.6/debian/config/config
+++ b/linux-2.6/debian/config/config
@@ -2546,6 +2546,12 @@ CONFIG_TCM_FILEIO=m
 CONFIG_TCM_PSCSI=m
 
 ##
+## file: drivers/target/loopback/Kconfig
+##
+CONFIG_LOOPBACK_TARGET=m
+# CONFIG_LOOPBACK_TARGET_CDB_DEBUG is not set
+
+##
 ## file: drivers/tty/Kconfig
 ##
 CONFIG_VT_HW_CONSOLE_BINDING=y
