--- a/linux-2.6/debian/templates/patch.apply.in
+++ b/linux-2.6/debian/templates/patch.apply.in
@@ -215,8 +215,9 @@ def parse_options():
     return options, args
 
 if __name__ == '__main__':
-    def showwarning(message, category, filename, lineno):
-        sys.stderr.write("Warning: %s\n" % message)
+    def showwarning(message, category, filename, lineno,
+                    file=sys.stderr, line=''):
+        file.write("Warning: %s\n" % message)
     import warnings
     warnings.showwarning = showwarning
     try:
