--- a/linux-2.6/debian/config/config
+++ b/linux-2.6/debian/config/config
@@ -3442,8 +3442,8 @@ CONFIG_PERF_EVENTS=y
 CONFIG_VM_EVENT_COUNTERS=y
 # CONFIG_COMPAT_BRK is not set
 ## choice: Choose SLAB allocator
-# CONFIG_SLAB is not set
-CONFIG_SLUB=y
+CONFIG_SLAB=y
+# CONFIG_SLUB is not set
 # CONFIG_SLOB is not set
 ## end choice
 CONFIG_PROFILING=y
