- disable EETI touchscreen on arm due to missing irq_to_gpio for several SoC
git-svn-id: svn://svn.debian.org/svn/kernel/dists/trunk@17460 510b9475-24dd-0310-9b6c-e0eefe99d49f

--- a/linux-2.6/debian/config/armel/config
+++ b/linux-2.6/debian/config/armel/config
@@ -31,6 +31,11 @@ CONFIG_MOUSE_PS2=m
 CONFIG_MOUSE_APPLETOUCH=m
 
 ##
+## file: drivers/input/mouse/Kconfig
+##
+# CONFIG_TOUCHSCREEN_EETI is not set
+
+##
 ## file: drivers/net/hamradio/Kconfig
 ##
 CONFIG_BPQETHER=m
