[x86] Enable BACKLIGHT_APPLE, replacing BACKLIGHT_MBP_NVIDIA (Closes: #627492)
git-svn-id: svn://svn.debian.org/svn/kernel/dists/trunk@17471 510b9475-24dd-0310-9b6c-e0eefe99d49f

--- a/linux-2.6/debian/config/config
+++ b/linux-2.6/debian/config/config
@@ -2807,6 +2807,7 @@ CONFIG_BACKLIGHT_LCD_SUPPORT=y
 # CONFIG_LCD_CLASS_DEVICE is not set
 CONFIG_BACKLIGHT_CLASS_DEVICE=y
 # CONFIG_BACKLIGHT_GENERIC is not set
+CONFIG_BACKLIGHT_APPLE=m
 # CONFIG_BACKLIGHT_SAHARA is not set
 CONFIG_BACKLIGHT_WM831X=m
 
