debian/config/config: Reorder config.
git-svn-id: svn://svn.debian.org/svn/kernel/dists/trunk@17847 510b9475-24dd-0310-9b6c-e0eefe99d49f

--- a/linux-2.6/debian/config/config
+++ b/linux-2.6/debian/config/config
@@ -3012,6 +3012,25 @@ CONFIG_AFS_FS=m
 CONFIG_AFS_FSCACHE=y
 
 ##
+## file: fs/aufs/Kconfig
+##
+CONFIG_AUFS_FS=m
+## choice: Maximum number of branches
+CONFIG_AUFS_BRANCH_MAX_127=y
+# CONFIG_AUFS_BRANCH_MAX_511 is not set
+# CONFIG_AUFS_BRANCH_MAX_1023 is not set
+# CONFIG_AUFS_BRANCH_MAX_32767 is not set
+## end choice
+# CONFIG_AUFS_HNOTIFY is not set
+# CONFIG_AUFS_EXPORT is not set
+# CONFIG_AUFS_RDU is not set
+# CONFIG_AUFS_SP_IATTR is not set
+# CONFIG_AUFS_SHWH is not set
+# CONFIG_AUFS_BR_RAMFS is not set
+# CONFIG_AUFS_BR_FUSE is not set
+# CONFIG_AUFS_DEBUG is not set
+
+##
 ## file: fs/autofs4/Kconfig
 ##
 CONFIG_AUTOFS4_FS=m
@@ -3509,6 +3528,7 @@ CONFIG_PROC_PID_CPUSET=y
 CONFIG_CGROUP_CPUACCT=y
 CONFIG_RESOURCE_COUNTERS=y
 CONFIG_CGROUP_MEM_RES_CTLR=y
+CONFIG_CGROUP_MEM_RES_CTLR_DISABLED=y
 CONFIG_CGROUP_MEM_RES_CTLR_SWAP=y
 # CONFIG_CGROUP_MEM_RES_CTLR_SWAP_ENABLED is not set
 CONFIG_CGROUP_SCHED=y
@@ -3637,6 +3657,7 @@ CONFIG_DEFAULT_MESSAGE_LOGLEVEL=4
 CONFIG_ENABLE_WARN_DEPRECATED=y
 CONFIG_ENABLE_MUST_CHECK=y
 CONFIG_MAGIC_SYSRQ=y
+CONFIG_MAGIC_SYSRQ_DEFAULT_MASK=0x01b6
 CONFIG_STRIP_ASM_SYMS=y
 CONFIG_UNUSED_SYMBOLS=y
 CONFIG_DEBUG_FS=y
@@ -4518,22 +4539,7 @@ CONFIG_INITRAMFS_SOURCE=""
 ##
 ## file: unknown
 ##
-# CONFIG_AUFS_BRANCH_MAX_1023 is not set
-CONFIG_AUFS_BRANCH_MAX_127=y
-# CONFIG_AUFS_BRANCH_MAX_32767 is not set
-# CONFIG_AUFS_BRANCH_MAX_511 is not set
-# CONFIG_AUFS_BR_FUSE is not set
-# CONFIG_AUFS_BR_RAMFS is not set
-# CONFIG_AUFS_DEBUG is not set
-# CONFIG_AUFS_EXPORT is not set
-CONFIG_AUFS_FS=m
 # CONFIG_AUFS_HINOTIFY is not set
-# CONFIG_AUFS_HNOTIFY is not set
-# CONFIG_AUFS_RDU is not set
-# CONFIG_AUFS_SHWH is not set
-# CONFIG_AUFS_SP_IATTR is not set
-CONFIG_CGROUP_MEM_RES_CTLR_DISABLED=y
 CONFIG_CGROUP_NS=y
-CONFIG_MAGIC_SYSRQ_DEFAULT_MASK=0x01b6
 CONFIG_SMBUS=m
 
