[x86/!486] Enable INTEL_IDLE
git-svn-id: svn://svn.debian.org/svn/kernel/dists/trunk@18179 510b9475-24dd-0310-9b6c-e0eefe99d49f

--- a/linux-2.6/debian/config/kernelarch-x86/config
+++ b/linux-2.6/debian/config/kernelarch-x86/config
@@ -548,7 +548,7 @@ CONFIG_BLK_DEV_TRM290=m
 ##
 ## file: drivers/idle/Kconfig
 ##
-# CONFIG_INTEL_IDLE is not set
+CONFIG_INTEL_IDLE=y
 
 ##
 ## file: drivers/input/gameport/Kconfig
