debian/config: Automatic reorder and cleanup
git-svn-id: svn://svn.debian.org/svn/kernel/dists/trunk@18188 510b9475-24dd-0310-9b6c-e0eefe99d49f

--- a/linux-2.6/debian/config/config
+++ b/linux-2.6/debian/config/config
@@ -324,7 +324,6 @@ CONFIG_FIREWIRE_NOSY=m
 # CONFIG_DEBUG_GPIO is not set
 # CONFIG_GPIO_SYSFS is not set
 # CONFIG_GPIO_GENERIC_PLATFORM is not set
-# CONFIG_GPIO_BASIC_MMIO is not set
 # CONFIG_GPIO_IT8761E is not set
 # CONFIG_GPIO_SCH is not set
 # CONFIG_GPIO_VX855 is not set
@@ -472,7 +471,6 @@ CONFIG_SENSORS_MAX6642=m
 CONFIG_SENSORS_MAX6650=m
 CONFIG_SENSORS_NTC_THERMISTOR=m
 CONFIG_SENSORS_PC87427=m
-# CONFIG_PMBUS is not set
 # CONFIG_SENSORS_SHT15 is not set
 CONFIG_SENSORS_SHT21=m
 CONFIG_SENSORS_SMM665=m
@@ -505,6 +503,11 @@ CONFIG_SENSORS_WM8350=m
 CONFIG_SENSORS_APPLESMC=m
 CONFIG_SENSORS_MC13783_ADC=m
 CONFIG_SENSORS_ATK0110=m
+
+##
+## file: drivers/hwmon/pmbus/Kconfig
+##
+# CONFIG_PMBUS is not set
 
 ##
 ## file: drivers/i2c/Kconfig
@@ -1170,7 +1173,6 @@ CONFIG_VIDEO_MEYE=m
 CONFIG_VIDEO_MXB=m
 CONFIG_VIDEO_HEXIUM_ORION=m
 CONFIG_VIDEO_HEXIUM_GEMINI=m
-CONFIG_VIDEO_CAFE_CCIC=m
 CONFIG_VIDEO_SR030PC30=m
 CONFIG_VIDEO_NOON010PC30=m
 CONFIG_SOC_CAMERA=m
@@ -1329,6 +1331,11 @@ CONFIG_VIDEO_HDPVR=m
 ##
 CONFIG_VIDEO_IVTV=m
 CONFIG_VIDEO_FB_IVTV=m
+
+##
+## file: drivers/media/video/marvell-ccic/Kconfig
+##
+CONFIG_VIDEO_CAFE_CCIC=m
 
 ##
 ## file: drivers/media/video/pvrusb2/Kconfig
@@ -2690,7 +2697,6 @@ CONFIG_ISCSI_TARGET=m
 ## file: drivers/target/loopback/Kconfig
 ##
 CONFIG_LOOPBACK_TARGET=m
-# CONFIG_LOOPBACK_TARGET_CDB_DEBUG is not set
 
 ##
 ## file: drivers/target/tcm_fc/Kconfig
@@ -3754,7 +3760,6 @@ CONFIG_TIMER_STATS=y
 # CONFIG_PROVE_LOCKING is not set
 # CONFIG_SPARSE_RCU_POINTER is not set
 # CONFIG_LOCK_STAT is not set
-# CONFIG_DEBUG_SPINLOCK_SLEEP is not set
 # CONFIG_DEBUG_LOCKING_API_SELFTESTS is not set
 # CONFIG_DEBUG_KOBJECT is not set
 # CONFIG_DEBUG_HIGHMEM is not set
@@ -4614,7 +4619,9 @@ CONFIG_INITRAMFS_SOURCE=""
 ##
 ## file: unknown
 ##
-# CONFIG_AUFS_HINOTIFY is not set
 CONFIG_CGROUP_NS=y
+# CONFIG_DEBUG_SPINLOCK_SLEEP is not set
+# CONFIG_GPIO_BASIC_MMIO is not set
+# CONFIG_LOOPBACK_TARGET_CDB_DEBUG is not set
 CONFIG_SMBUS=m
 
