--- a/linux-2.6/debian/config/kernelarch-x86/config
+++ b/linux-2.6/debian/config/kernelarch-x86/config
@@ -55,12 +55,9 @@ CONFIG_HOTPLUG_CPU=y
 # CONFIG_CMDLINE_BOOL is not set
 CONFIG_PCI=y
 CONFIG_PCI_CNB20LE_QUIRK=y
-CONFIG_DMAR=y
-# CONFIG_DMAR_DEFAULT_ON is not set
-CONFIG_INTR_REMAP=y
+# CONFIG_RAPIDIO is not set
 CONFIG_IA32_EMULATION=y
 CONFIG_IA32_AOUT=y
-# CONFIG_RAPIDIO is not set
 
 ##
 ## file: arch/x86/Kconfig.debug
@@ -610,6 +607,13 @@ CONFIG_SERIO_RAW=m
 ## file: drivers/input/touchscreen/Kconfig
 ##
 CONFIG_INPUT_TOUCHSCREEN=y
+
+##
+## file: drivers/iommu/Kconfig
+##
+CONFIG_DMAR=y
+# CONFIG_DMAR_DEFAULT_ON is not set
+CONFIG_INTR_REMAP=y
 
 ##
 ## file: drivers/isdn/Kconfig
@@ -1231,7 +1235,6 @@ CONFIG_R8712U=m
 ## file: drivers/staging/rts_pstor/Kconfig
 ##
 CONFIG_RTS_PSTOR=m
-# RTS_PSTOR_DEBUG is not set
 
 ##
 ## file: drivers/staging/tm6000/Kconfig
@@ -1274,7 +1277,6 @@ CONFIG_PHONE_IXJ_PCMCIA=m
 ## file: drivers/thermal/Kconfig
 ##
 CONFIG_THERMAL=m
-CONFIG_THERMAL_HWMON=y
 
 ##
 ## file: drivers/tty/Kconfig
