--- a/linux-2.6/debian/config/sparc/config
+++ b/linux-2.6/debian/config/sparc/config
@@ -303,7 +303,6 @@ CONFIG_SUNDANCE=m
 CONFIG_SUNDANCE_MMIO=y
 CONFIG_VIA_RHINE=m
 # CONFIG_VIA_RHINE_MMIO is not set
-CONFIG_MYRI_SBUS=m
 CONFIG_FDDI=y
 CONFIG_SKFP=m
 # CONFIG_HIPPI is not set
@@ -622,4 +621,9 @@ CONFIG_SND_MAESTRO3=m
 CONFIG_SND_SUN_AMD7930=m
 CONFIG_SND_SUN_CS4231=m
 CONFIG_SND_SUN_DBRI=m
+
+##
+## file: unknown
+##
+CONFIG_MYRI_SBUS=m
 
