--- a/linux-2.6/debian/config/sh4/config
+++ b/linux-2.6/debian/config/sh4/config
@@ -4,7 +4,6 @@
 CONFIG_SH_CPU_FREQ=y
 CONFIG_KEXEC=y
 CONFIG_SECCOMP=y
-CONFIG_VIRTUALIZATION=y
 
 ##
 ## file: arch/sh/Kconfig.cpu
@@ -53,4 +52,9 @@ CONFIG_SPARSE_IRQ=y
 ## choice: Preemption Model
 CONFIG_PREEMPT_NONE=y
 ## end choice
+
+##
+## file: unknown
+##
+CONFIG_VIRTUALIZATION=y
 
