debian/bin/gencontrol.py, debian/templates, debian/rules.real: Make ABINAME always include the complete version.
git-svn-id: svn://svn.debian.org/svn/kernel/dists/trunk@18192 510b9475-24dd-0310-9b6c-e0eefe99d49f

--- a/linux-2.6/debian/templates/control.image-dbg.in
+++ b/linux-2.6/debian/templates/control.image-dbg.in
@@ -1,7 +1,7 @@
-Package: linux-image-@upstreamversion@@abiname@@localversion@-dbg
-Depends: linux-image-@upstreamversion@@abiname@@localversion@, ${misc:Depends}
+Package: linux-image-@abiname@@localversion@-dbg
+Depends: linux-image-@abiname@@localversion@, ${misc:Depends}
 Section: debug
 Priority: extra
-Description: Debugging infos for Linux @upstreamversion@@abiname@@localversion@
+Description: Debugging infos for Linux @abiname@@localversion@
  This package provides the binary debug image and pre-built debug loadable                                                     
  modules for Linux kernel @upstreamversion@ on @longclass@ machines.
