--- a/linux-2.6/debian/templates/control.image.type-modulesextra.in
+++ b/linux-2.6/debian/templates/control.image.type-modulesextra.in
@@ -1,11 +1,11 @@
-Package: linux-image-@upstreamversion@@abiname@@localversion@
+Package: linux-image-@abiname@@localversion@
 Provides: linux-image
-Depends: linux-modules-@upstreamversion@@abiname@@localversion@ (= ${binary:Version}), ${misc:Depends}
+Depends: linux-modules-@abiname@@localversion@ (= ${binary:Version}), ${misc:Depends}
 Suggests: linux-doc-@version@
 Description: Linux @upstreamversion@ for @class@
  The Linux kernel @upstreamversion@ for use on @longclass@.
 
-Package: linux-modules-@upstreamversion@@abiname@@localversion@
+Package: linux-modules-@abiname@@localversion@
 Depends: module-init-tools, ${misc:Depends}
 Description: Linux @upstreamversion@ modules for @class@
  Modules for Linux kernel @upstreamversion@ for use on @longclass@.
