--- a/linux-2.6/debian/templates/control.main.in
+++ b/linux-2.6/debian/templates/control.main.in
@@ -55,7 +55,7 @@ Description: Linux kernel API manual pages for version @version@
 
 Package: linux-patch-debian-@version@
 Architecture: all
-Depends: bzip2, linux-support-@upstreamversion@@abiname@, python, ${misc:Depends}
+Depends: bzip2, linux-support-@abiname@, python, ${misc:Depends}
 Suggests: linux-source-@version@
 Description: Debian patches to version @version@ of the Linux kernel
  This package includes the patches used to produce the prepackaged
@@ -66,7 +66,7 @@ Description: Debian patches to version @version@ of the Linux kernel
  Linux @version@ kernel but only against the kernel tarball
  @source_package@_@source_upstream@.orig.tar.gz from the Debian archive.
 
-Package: linux-support-@upstreamversion@@abiname@
+Package: linux-support-@abiname@
 Architecture: all
 Section: devel
 Depends: ${python:Depends}, ${misc:Depends}
