--- a/linux-2.6/debian/templates/image.xen.postinst.in
+++ b/linux-2.6/debian/templates/image.xen.postinst.in
@@ -5,9 +5,9 @@ set -e
 case "$1" in
     configure)
         if [ "$2" ]; then
-            update-initramfs -u -k @upstreamversion@@abiname@@localversion@
+            update-initramfs -u -k @abiname@@localversion@
         else
-            update-initramfs -c -t -k @upstreamversion@@abiname@@localversion@
+            update-initramfs -c -t -k @abiname@@localversion@
             command -v update-grub > /dev/null && update-grub
         fi
     ;;
