--- a/linux-2.6/debian/templates/control.headers.arch.in
+++ b/linux-2.6/debian/templates/control.headers.arch.in
@@ -1,11 +1,11 @@
-Package: linux-headers-@upstreamversion@@abiname@-all
-Depends: linux-headers-@upstreamversion@@abiname@-all-${kernel:Arch} (= ${binary:Version}), ${misc:Depends}
+Package: linux-headers-@abiname@-all
+Depends: linux-headers-@abiname@-all-${kernel:Arch} (= ${binary:Version}), ${misc:Depends}
 Description: All header files for Linux @version@ (meta-package)
  This package depends against all architecture-specific kernel header files
  for Linux kernel version @upstreamversion@, generally used for building out-of-tree
  kernel modules.
 
-Package: linux-headers-@upstreamversion@@abiname@-all-@arch@
+Package: linux-headers-@abiname@-all-@arch@
 Depends: ${misc:Depends}
 Description: All header files for Linux @version@ (meta-package)
  This package depends against all architecture-specific kernel header files
