--- a/linux-2.6/debian/templates/control.headers.featureset.in
+++ b/linux-2.6/debian/templates/control.headers.featureset.in
@@ -1,8 +1,8 @@
-Package: linux-headers-@upstreamversion@@abiname@-common@localversion_headers@
+Package: linux-headers-@abiname@-common@localversion_headers@
 Depends: ${misc:Depends}
-Description: Common header files for Linux @upstreamversion@@abiname@@localversion_headers@
+Description: Common header files for Linux @abiname@@localversion_headers@
  This package provides the architecture-specific common kernel header files
- for Linux kernel version @upstreamversion@@abiname@@localversion_headers@, generally used for building out-of-tree
+ for Linux kernel version @abiname@@localversion_headers@, generally used for building out-of-tree
  kernel modules.  To obtain a complete set of headers you also need to install
- the linux-headers-@upstreamversion@@abiname@-(flavour) package, matching the
+ the linux-headers-@abiname@-(flavour) package, matching the
  flavour of the kernel you intend the build for.
