--- a/linux-2.6/debian/templates/control.headers.in
+++ b/linux-2.6/debian/templates/control.headers.in
@@ -1,10 +1,10 @@
-Package: linux-headers-@upstreamversion@@abiname@@localversion@
-Depends: linux-headers-@upstreamversion@@abiname@-common@localversion_headers@ (= ${binary:Version}), linux-kbuild-@version@, ${misc:Depends}
+Package: linux-headers-@abiname@@localversion@
+Depends: linux-headers-@abiname@-common@localversion_headers@ (= ${binary:Version}), linux-kbuild-@version@, ${misc:Depends}
 Provides: linux-headers
-Description: Header files for Linux @upstreamversion@@abiname@@localversion@
+Description: Header files for Linux @abiname@@localversion@
  This package provides the architecture-specific kernel header files
- for Linux kernel @upstreamversion@@abiname@@localversion@, generally
+ for Linux kernel @abiname@@localversion@, generally
  used for building out-of-tree kernel modules.  These files are going to be
- installed into /usr/src/linux-headers-@upstreamversion@@abiname@@localversion@, and can
+ installed into /usr/src/linux-headers-@abiname@@localversion@, and can
  be used for building modules that load into the kernel provided by the
- linux-image-@upstreamversion@@abiname@@localversion@ package.
+ linux-image-@abiname@@localversion@ package.
