--- a/linux-2.6/debian/templates/control.image.type-plain.in
+++ b/linux-2.6/debian/templates/control.image.type-plain.in
@@ -1,5 +1,5 @@
-Package: linux-image-@upstreamversion@@abiname@@localversion@
-Provides: linux-image, linux-modules-@upstreamversion@@abiname@@localversion@
+Package: linux-image-@abiname@@localversion@
+Provides: linux-image, linux-modules-@abiname@@localversion@
 Pre-Depends: debconf | debconf-2.0
 Depends: module-init-tools, linux-base (>= 3~), ${shlibs:Depends}, ${misc:Depends}
 Recommends: firmware-linux-free (>= 3~)
