--- a/linux-2.6/debian/templates/control.image.type-standalone.in
+++ b/linux-2.6/debian/templates/control.image.type-standalone.in
@@ -1,4 +1,4 @@
-Package: linux-image-@upstreamversion@@abiname@@localversion@
+Package: linux-image-@abiname@@localversion@
 Provides: linux-image
 Suggests: linux-doc-@version@
 Depends: ${shlibs:Depends}, ${misc:Depends}
