--- a/linux-2.6/debian/templates/control.xen-linux-system.in
+++ b/linux-2.6/debian/templates/control.xen-linux-system.in
@@ -1,5 +1,5 @@
-Package: xen-linux-system-@upstreamversion@@abiname@@localversion@
-Depends: linux-image-@upstreamversion@@abiname@@localversion@ (= ${binary:Version}), ${misc:Depends}
+Package: xen-linux-system-@abiname@@localversion@
+Depends: linux-image-@abiname@@localversion@ (= ${binary:Version}), ${misc:Depends}
 Description: Xen system with Linux @upstreamversion@ on @class@ (meta-package)
  This package depends on the binary Linux image and hypervisors.
 
