--- a/linux-2.6/debian/templates/image.xen.prerm.in
+++ b/linux-2.6/debian/templates/image.xen.prerm.in
@@ -4,7 +4,7 @@ set -e
 
 case "$1" in
     remove)
-        update-initramfs -d -k @upstreamversion@@abiname@@localversion@ || true
+        update-initramfs -d -k @abiname@@localversion@ || true
     ;;
 
     upgrade|deconfigure|failed-upgrade)
