debian/rules, debian/rules.real: Move job definition into main makefile.
git-svn-id: svn://svn.debian.org/svn/kernel/dists/trunk@18200 510b9475-24dd-0310-9b6c-e0eefe99d49f

--- a/linux-2.6/debian/rules
+++ b/linux-2.6/debian/rules
@@ -11,6 +11,13 @@ include debian/rules.defs
 
 stamp = [ -d $(dir $@) ] || mkdir $(dir $@); touch $@
 
+ifneq (,$(filter parallel=%,$(DEB_BUILD_OPTIONS)))
+  DEBIAN_KERNEL_JOBS := $(subst parallel=,,$(filter parallel=%,$(DEB_BUILD_OPTIONS)))
+endif
+ifdef DEBIAN_KERNEL_JOBS
+  MAKEFLAGS += -j$(DEBIAN_KERNEL_JOBS)
+endif
+
 .NOTPARALLEL:
 
 source: debian/control $(STAMPS_DIR)/source-base
