* debian/changelog: Update. * debian/config/config:   Disable SECURITY_SELINUX_BOOTPARAM and SECURITY_SELINUX_DISABLE.
git-svn-id: svn://svn.debian.org/svn/kernel/dists/trunk@18202 510b9475-24dd-0310-9b6c-e0eefe99d49f

--- a/linux-2.6/debian/config/config
+++ b/linux-2.6/debian/config/config
@@ -4464,9 +4464,8 @@ CONFIG_DEFAULT_SECURITY_DAC=y
 ## file: security/selinux/Kconfig
 ##
 CONFIG_SECURITY_SELINUX=y
-CONFIG_SECURITY_SELINUX_BOOTPARAM=y
-CONFIG_SECURITY_SELINUX_BOOTPARAM_VALUE=0
-CONFIG_SECURITY_SELINUX_DISABLE=y
+# CONFIG_SECURITY_SELINUX_BOOTPARAM is not set
+# CONFIG_SECURITY_SELINUX_DISABLE is not set
 CONFIG_SECURITY_SELINUX_DEVELOP=y
 CONFIG_SECURITY_SELINUX_AVC_STATS=y
 CONFIG_SECURITY_SELINUX_CHECKREQPROT_VALUE=1
