[x86] Add amilo-rfkill driver for some Fujitsu-Siemens Amilo laptops (Closes: #631664)
git-svn-id: svn://svn.debian.org/svn/kernel/dists/trunk@18263 510b9475-24dd-0310-9b6c-e0eefe99d49f

--- a/linux-2.6/debian/config/kernelarch-x86/config
+++ b/linux-2.6/debian/config/kernelarch-x86/config
@@ -981,6 +981,7 @@ CONFIG_ACERHDF=m
 CONFIG_DELL_LAPTOP=m
 CONFIG_DELL_WMI=m
 CONFIG_DELL_WMI_AIO=m
+CONFIG_AMILO_RFKILL=m
 CONFIG_HP_ACCEL=m
 CONFIG_SONYPI_COMPAT=y
 CONFIG_IDEAPAD_LAPTOP=m
