--- a/linux-2.6/debian/config/config
+++ b/linux-2.6/debian/config/config
@@ -4650,7 +4650,8 @@ CONFIG_DEFAULT_SECURITY_DAC=y
 ##
 ## file: security/apparmor/Kconfig
 ##
-# CONFIG_SECURITY_APPARMOR is not set
+CONFIG_SECURITY_APPARMOR=y
+CONFIG_SECURITY_APPARMOR_BOOTPARAM_VALUE=1
 
 ##
 ## file: security/integrity/ima/Kconfig
