--- a/linux-2.6/debian/config/kernelarch-x86/config
+++ b/linux-2.6/debian/config/kernelarch-x86/config
@@ -439,6 +439,12 @@ CONFIG_USB_KBD=m
 CONFIG_USB_MOUSE=m
 
 ##
+## file: drivers/hv/Kconfig
+##
+CONFIG_HYPERV=m
+CONFIG_HYPERV_UTILS=m
+
+##
 ## file: drivers/hwmon/Kconfig
 ##
 CONFIG_SENSORS_ADM1021=m
@@ -1289,10 +1295,8 @@ CONFIG_DRM_PSB=m
 ##
 ## file: drivers/staging/hv/Kconfig
 ##
-CONFIG_HYPERV=m
 CONFIG_HYPERV_STORAGE=m
 CONFIG_HYPERV_NET=m
-CONFIG_HYPERV_UTILS=m
 CONFIG_HYPERV_MOUSE=m
 
 ##
