--- a/linux-2.6/debian/config/config
+++ b/linux-2.6/debian/config/config
@@ -988,6 +988,7 @@ CONFIG_DVB_USB_EC168=m
 CONFIG_DVB_USB_AZ6027=m
 CONFIG_DVB_USB_LME2510=m
 CONFIG_DVB_USB_TECHNISAT_USB2=m
+CONFIG_DVB_USB_IT913X=m
 
 ##
 ## file: drivers/media/dvb/firewire/Kconfig
