debian/config: Automatically reorder config.
git-svn-id: svn://svn.debian.org/svn/kernel/dists/trunk@18454 510b9475-24dd-0310-9b6c-e0eefe99d49f

--- a/linux-2.6/debian/config/config
+++ b/linux-2.6/debian/config/config
@@ -1,9 +1,4 @@
 ##
-## file: arch/Kconfig
-##
-# CONFIG_JUMP_LABEL is not set
-
-##
 ## file: block/Kconfig
 ##
 CONFIG_BLOCK=y
@@ -394,7 +389,6 @@ CONFIG_HID_LCPOWER=m
 CONFIG_LOGITECH_FF=y
 CONFIG_LOGIRUMBLEPAD2_FF=y
 CONFIG_LOGIG940_FF=y
-CONFIG_LOGIWII_FF=y
 CONFIG_HID_MAGICMOUSE=m
 CONFIG_HID_MULTITOUCH=m
 CONFIG_HID_NTRIG=m
@@ -431,6 +425,11 @@ CONFIG_HID_ZYDACRON=m
 ##
 CONFIG_HID_PID=y
 CONFIG_USB_HIDDEV=y
+
+##
+## file: drivers/hv/Kconfig
+##
+# CONFIG_HYPERV is not set
 
 ##
 ## file: drivers/hwmon/Kconfig
@@ -713,7 +712,6 @@ CONFIG_KEYBOARD_STOWAWAY=m
 # CONFIG_INPUT_AD714X is not set
 # CONFIG_INPUT_MMA8450 is not set
 # CONFIG_INPUT_MPU3050 is not set
-CONFIG_INPUT_ATI_REMOTE=m
 CONFIG_INPUT_ATI_REMOTE2=m
 CONFIG_INPUT_KEYSPAN_REMOTE=m
 # CONFIG_INPUT_KXTJ9 is not set
@@ -857,7 +855,6 @@ CONFIG_MISDN_L1OIP=m
 CONFIG_NEW_LEDS=y
 CONFIG_LEDS_CLASS=y
 CONFIG_LEDS_NET48XX=m
-CONFIG_LEDS_ALIX2=m
 CONFIG_LEDS_PCA9532=m
 # CONFIG_LEDS_GPIO is not set
 CONFIG_LEDS_LP3944=m
@@ -1172,6 +1169,8 @@ CONFIG_VIDEO_SAA7185=m
 CONFIG_VIDEO_ADV7170=m
 CONFIG_VIDEO_ADV7175=m
 CONFIG_VIDEO_OV7670=m
+CONFIG_VIDEO_SR030PC30=m
+CONFIG_VIDEO_NOON010PC30=m
 CONFIG_VIDEO_UPD64031A=m
 CONFIG_VIDEO_UPD64083=m
 CONFIG_VIDEO_VIVI=m
@@ -1183,8 +1182,6 @@ CONFIG_VIDEO_MEYE=m
 CONFIG_VIDEO_MXB=m
 CONFIG_VIDEO_HEXIUM_ORION=m
 CONFIG_VIDEO_HEXIUM_GEMINI=m
-CONFIG_VIDEO_SR030PC30=m
-CONFIG_VIDEO_NOON010PC30=m
 CONFIG_SOC_CAMERA=m
 CONFIG_SOC_CAMERA_IMX074=m
 CONFIG_SOC_CAMERA_MT9M001=m
@@ -1242,6 +1239,11 @@ CONFIG_VIDEO_CX231XX_DVB=m
 ## file: drivers/media/video/cx23885/Kconfig
 ##
 CONFIG_VIDEO_CX23885=m
+
+##
+## file: drivers/media/video/cx25821/Kconfig
+##
+# CONFIG_VIDEO_CX25821 is not set
 
 ##
 ## file: drivers/media/video/cx25840/Kconfig
@@ -1451,7 +1453,6 @@ CONFIG_I2O_BUS=m
 ##
 ## file: drivers/mfd/Kconfig
 ##
-CONFIG_MFD_SUPPORT=y
 CONFIG_MFD_SM501=m
 CONFIG_HTC_PASIC3=m
 # CONFIG_UCB1400_CORE is not set
@@ -1648,35 +1649,17 @@ CONFIG_MTD_UBI_BEB_RESERVE=1
 ## file: drivers/net/Kconfig
 ##
 CONFIG_NETDEVICES=y
-CONFIG_IFB=m
-CONFIG_DUMMY=m
 CONFIG_BONDING=m
+CONFIG_DUMMY=m
+CONFIG_EQUALIZER=m
+CONFIG_MII=m
+CONFIG_IFB=m
 CONFIG_MACVLAN=m
 CONFIG_MACVTAP=m
-CONFIG_EQUALIZER=m
-CONFIG_TUN=m
-CONFIG_VETH=m
-CONFIG_MII=m
-CONFIG_DEFXX=m
-# CONFIG_DEFXX_MMIO is not set
-CONFIG_PPP=m
-CONFIG_PPP_MULTILINK=y
-CONFIG_PPP_FILTER=y
-CONFIG_PPP_ASYNC=m
-CONFIG_PPP_SYNC_TTY=m
-CONFIG_PPP_DEFLATE=m
-CONFIG_PPP_BSDCOMP=m
-CONFIG_PPP_MPPE=m
-CONFIG_PPPOE=m
-CONFIG_PPTP=m
-CONFIG_PPPOATM=m
-CONFIG_PPPOL2TP=m
-CONFIG_SLIP=m
-CONFIG_SLIP_COMPRESSED=y
-CONFIG_SLIP_SMART=y
-CONFIG_SLIP_MODE_SLIP6=y
 CONFIG_NETCONSOLE=m
 CONFIG_NETCONSOLE_DYNAMIC=y
+CONFIG_TUN=m
+CONFIG_VETH=m
 CONFIG_VIRTIO_NET=m
 CONFIG_VMXNET3=m
 
@@ -1799,6 +1782,15 @@ CONFIG_NET_VENDOR_CISCO=y
 ## file: drivers/net/ethernet/cisco/enic/Kconfig
 ##
 CONFIG_ENIC=m
+
+##
+## file: drivers/net/ethernet/dec/tulip/Kconfig
+##
+CONFIG_DE2104X_DSL=0
+CONFIG_TULIP_NAPI=y
+CONFIG_TULIP_NAPI_HW_MITIGATION=y
+# CONFIG_DE4X5 is not set
+CONFIG_ULI526X=m
 
 ##
 ## file: drivers/net/ethernet/dlink/Kconfig
@@ -1992,6 +1984,12 @@ CONFIG_NET_VENDOR_VIA=y
 CONFIG_VIA_VELOCITY=m
 
 ##
+## file: drivers/net/fddi/Kconfig
+##
+CONFIG_DEFXX=m
+# CONFIG_DEFXX_MMIO is not set
+
+##
 ## file: drivers/net/hamradio/Kconfig
 ##
 CONFIG_MKISS=m
@@ -2046,6 +2044,30 @@ CONFIG_MDIO_BITBANG=m
 # CONFIG_MDIO_GPIO is not set
 
 ##
+## file: drivers/net/ppp/Kconfig
+##
+CONFIG_PPP=m
+CONFIG_PPP_BSDCOMP=m
+CONFIG_PPP_DEFLATE=m
+CONFIG_PPP_FILTER=y
+CONFIG_PPP_MPPE=m
+CONFIG_PPP_MULTILINK=y
+CONFIG_PPPOATM=m
+CONFIG_PPPOE=m
+CONFIG_PPTP=m
+CONFIG_PPPOL2TP=m
+CONFIG_PPP_ASYNC=m
+CONFIG_PPP_SYNC_TTY=m
+
+##
+## file: drivers/net/slip/Kconfig
+##
+CONFIG_SLIP=m
+CONFIG_SLIP_COMPRESSED=y
+CONFIG_SLIP_SMART=y
+CONFIG_SLIP_MODE_SLIP6=y
+
+##
 ## file: drivers/net/tokenring/Kconfig
 ##
 CONFIG_TR=y
@@ -2060,15 +2082,6 @@ CONFIG_SKISA=m
 CONFIG_PROTEON=m
 CONFIG_ABYSS=m
 CONFIG_SMCTR=m
-
-##
-## file: drivers/net/tulip/Kconfig
-##
-CONFIG_DE2104X_DSL=0
-CONFIG_TULIP_NAPI=y
-CONFIG_TULIP_NAPI_HW_MITIGATION=y
-# CONFIG_DE4X5 is not set
-CONFIG_ULI526X=m
 
 ##
 ## file: drivers/net/usb/Kconfig
@@ -2198,6 +2211,13 @@ CONFIG_B43LEGACY_DMA_AND_PIO_MODE=y
 # CONFIG_B43LEGACY_DMA_MODE is not set
 # CONFIG_B43LEGACY_PIO_MODE is not set
 ## end choice
+
+##
+## file: drivers/net/wireless/brcm80211/Kconfig
+##
+CONFIG_BRCMSMAC=m
+# CONFIG_BRCMFMAC is not set
+# CONFIG_BRCMDBG is not set
 
 ##
 ## file: drivers/net/wireless/hostap/Kconfig
@@ -2564,8 +2584,8 @@ CONFIG_SCSI_AHA1542=m
 CONFIG_SCSI_AHA1740=m
 CONFIG_SCSI_AACRAID=m
 CONFIG_SCSI_AIC7XXX_OLD=m
+CONFIG_SCSI_MVUMI=m
 CONFIG_SCSI_ADVANSYS=m
-# CONFIG_SCSI_ARCMSR_AER is not set
 CONFIG_SCSI_HPTIOP=m
 CONFIG_VMWARE_PVSCSI=m
 CONFIG_LIBFC=m
@@ -2576,7 +2596,6 @@ CONFIG_SCSI_IMM=m
 # CONFIG_SCSI_IZIP_EPP16 is not set
 # CONFIG_SCSI_IZIP_SLOW_CTR is not set
 CONFIG_SCSI_STEX=m
-CONFIG_SCSI_MVUMI=m
 CONFIG_SCSI_SYM53C8XX_MMIO=y
 # CONFIG_SCSI_IPR is not set
 CONFIG_SCSI_LPFC=m
@@ -2730,13 +2749,6 @@ CONFIG_STAGING=y
 # CONFIG_ASUS_OLED is not set
 
 ##
-## file: drivers/staging/brcm80211/Kconfig
-##
-CONFIG_BRCMSMAC=m
-# CONFIG_BRCMFMAC is not set
-# CONFIG_BRCMDBG is not set
-
-##
 ## file: drivers/staging/comedi/Kconfig
 ##
 # CONFIG_COMEDI is not set
@@ -2745,11 +2757,6 @@ CONFIG_BRCMSMAC=m
 ## file: drivers/staging/crystalhd/Kconfig
 ##
 # CONFIG_CRYSTALHD is not set
-
-##
-## file: drivers/staging/cx25821/Kconfig
-##
-# CONFIG_VIDEO_CX25821 is not set
 
 ##
 ## file: drivers/staging/echo/Kconfig
@@ -2767,16 +2774,6 @@ CONFIG_BRCMSMAC=m
 # CONFIG_TRANZPORT is not set
 
 ##
-## file: drivers/staging/go7007/Kconfig
-##
-# CONFIG_VIDEO_GO7007 is not set
-
-##
-## file: drivers/staging/hv/Kconfig
-##
-# CONFIG_HYPERV is not set
-
-##
 ## file: drivers/staging/iio/Kconfig
 ##
 # CONFIG_IIO is not set
@@ -2785,6 +2782,11 @@ CONFIG_BRCMSMAC=m
 ## file: drivers/staging/line6/Kconfig
 ##
 # CONFIG_LINE6_USB is not set
+
+##
+## file: drivers/staging/media/go7007/Kconfig
+##
+# CONFIG_VIDEO_GO7007 is not set
 
 ##
 ## file: drivers/staging/panel/Kconfig
@@ -4811,4 +4813,14 @@ CONFIG_SND_USB_6FIRE=m
 ## file: usr/Kconfig
 ##
 CONFIG_INITRAMFS_SOURCE=""
+
+##
+## file: unknown
+##
+CONFIG_INPUT_ATI_REMOTE=m
+# CONFIG_JUMP_LABEL is not set
+CONFIG_LEDS_ALIX2=m
+CONFIG_LOGIWII_FF=y
+CONFIG_MFD_SUPPORT=y
+# CONFIG_SCSI_ARCMSR_AER is not set
 
