--- a/linux-2.6/debian/config/mipsel/config
+++ b/linux-2.6/debian/config/mipsel/config
@@ -8,7 +8,7 @@ CONFIG_CPU_LITTLE_ENDIAN=y
 CONFIG_SECCOMP=y
 
 ##
-## file: drivers/net/Kconfig
+## file: drivers/net/ethernet/sun/Kconfig
 ##
 # CONFIG_NIU is not set
 
