--- a/linux-2.6/debian/config/s390/config
+++ b/linux-2.6/debian/config/s390/config
@@ -55,15 +55,19 @@ CONFIG_S390_PRNG=m
 # CONFIG_MEMSTICK is not set
 
 ##
-## file: drivers/net/Kconfig
-##
-# CONFIG_PPP is not set
-# CONFIG_SLIP is not set
-
-##
 ## file: drivers/net/appletalk/Kconfig
 ##
 # CONFIG_ATALK is not set
+
+##
+## file: drivers/net/ppp/Kconfig
+##
+# CONFIG_PPP is not set
+
+##
+## file: drivers/net/slip/Kconfig
+##
+# CONFIG_SLIP is not set
 
 ##
 ## file: drivers/net/wan/Kconfig
