--- a/linux-2.6/debian/config/kernelarch-x86/config
+++ b/linux-2.6/debian/config/kernelarch-x86/config
@@ -98,7 +98,6 @@ CONFIG_KVM_AMD=m
 ##
 CONFIG_XEN=y
 # CONFIG_XEN_DEBUG_FS is not set
-# CONFIG_XEN_DEBUG is not set
 
 ##
 ## file: crypto/Kconfig
@@ -509,9 +508,9 @@ CONFIG_I2C_SIS96X=m
 CONFIG_I2C_VIA=m
 CONFIG_I2C_VIAPRO=m
 CONFIG_I2C_SCMI=m
+CONFIG_I2C_EG20T=m
 CONFIG_I2C_PARPORT=m
 CONFIG_I2C_PARPORT_LIGHT=m
-CONFIG_I2C_EG20T=m
 CONFIG_I2C_PCA_ISA=m
 CONFIG_SCx200_ACB=m
 
@@ -622,13 +621,6 @@ CONFIG_SERIO_RAW=m
 CONFIG_INPUT_TOUCHSCREEN=y
 
 ##
-## file: drivers/iommu/Kconfig
-##
-CONFIG_DMAR=y
-# CONFIG_DMAR_DEFAULT_ON is not set
-CONFIG_INTR_REMAP=y
-
-##
 ## file: drivers/isdn/Kconfig
 ##
 CONFIG_ISDN=y
@@ -694,6 +686,13 @@ CONFIG_IR_WINBOND_CIR=m
 CONFIG_VIDEO_VIA_CAMERA=m
 
 ##
+## file: drivers/media/video/tm6000/Kconfig
+##
+CONFIG_VIDEO_TM6000=m
+CONFIG_VIDEO_TM6000_ALSA=m
+CONFIG_VIDEO_TM6000_DVB=m
+
+##
 ## file: drivers/message/i2o/Kconfig
 ##
 CONFIG_I2O=m
@@ -726,7 +725,6 @@ CONFIG_MMC_BLOCK=m
 ## file: drivers/mtd/Kconfig
 ##
 CONFIG_MTD=m
-# CONFIG_MTD_DEBUG is not set
 CONFIG_MTD_REDBOOT_PARTS=y
 CONFIG_MTD_REDBOOT_DIRECTORY_BLOCK=-1
 # CONFIG_MTD_REDBOOT_PARTS_UNALLOCATED is not set
@@ -818,18 +816,11 @@ CONFIG_MTD_NAND_PLATFORM=m
 ## file: drivers/net/Kconfig
 ##
 CONFIG_DUMMY=m
-CONFIG_NET_SB1000=m
-CONFIG_PCH_GBE=m
-CONFIG_XEN_NETDEV_FRONTEND=m
-CONFIG_XEN_NETDEV_BACKEND=m
-CONFIG_FDDI=y
-CONFIG_SKFP=m
-CONFIG_HIPPI=y
-CONFIG_ROADRUNNER=m
-# CONFIG_ROADRUNNER_LARGE_RINGS is not set
-CONFIG_PLIP=m
 CONFIG_NET_FC=y
 # CONFIG_NETPOLL_TRAP is not set
+CONFIG_NET_SB1000=m
+CONFIG_XEN_NETDEV_FRONTEND=m
+CONFIG_XEN_NETDEV_BACKEND=m
 
 ##
 ## file: drivers/net/arcnet/Kconfig
@@ -893,6 +884,18 @@ CONFIG_NET_VENDOR_BROADCOM=y
 CONFIG_B44=m
 
 ##
+## file: drivers/net/ethernet/dec/tulip/Kconfig
+##
+CONFIG_NET_TULIP=y
+CONFIG_DE2104X=m
+CONFIG_TULIP=m
+# CONFIG_TULIP_MWI is not set
+# CONFIG_TULIP_MMIO is not set
+CONFIG_WINBOND_840=m
+CONFIG_DM9102=m
+CONFIG_PCMCIA_XIRCOM=m
+
+##
 ## file: drivers/net/ethernet/dlink/Kconfig
 ##
 CONFIG_NET_VENDOR_DLINK=y
@@ -930,6 +933,11 @@ CONFIG_NATSEMI=m
 ##
 CONFIG_NET_VENDOR_NVIDIA=y
 CONFIG_FORCEDETH=m
+
+##
+## file: drivers/net/ethernet/oki-semi/pch_gbe/Kconfig
+##
+CONFIG_PCH_GBE=m
 
 ##
 ## file: drivers/net/ethernet/realtek/Kconfig
@@ -976,6 +984,19 @@ CONFIG_NET_VENDOR_XIRCOM=y
 CONFIG_PCMCIA_XIRC2PS=m
 
 ##
+## file: drivers/net/fddi/Kconfig
+##
+CONFIG_FDDI=y
+CONFIG_SKFP=m
+
+##
+## file: drivers/net/hippi/Kconfig
+##
+CONFIG_HIPPI=y
+CONFIG_ROADRUNNER=m
+# CONFIG_ROADRUNNER_LARGE_RINGS is not set
+
+##
 ## file: drivers/net/irda/Kconfig
 ##
 CONFIG_IRTTY_SIR=m
@@ -989,21 +1010,9 @@ CONFIG_VLSI_FIR=m
 CONFIG_VIA_FIR=m
 
 ##
-## file: drivers/net/spi/Kconfig
+## file: drivers/net/plip/Kconfig
 ##
-CONFIG_SPI_TOPCLIFF_PCH=m
-
-##
-## file: drivers/net/tulip/Kconfig
-##
-CONFIG_NET_TULIP=y
-CONFIG_DE2104X=m
-CONFIG_TULIP=m
-# CONFIG_TULIP_MWI is not set
-# CONFIG_TULIP_MMIO is not set
-CONFIG_WINBOND_840=m
-CONFIG_DM9102=m
-CONFIG_PCMCIA_XIRCOM=m
+CONFIG_PLIP=m
 
 ##
 ## file: drivers/net/wan/Kconfig
@@ -1190,6 +1199,11 @@ CONFIG_PCMCIA_SYM53C500=m
 CONFIG_SFI=y
 
 ##
+## file: drivers/spi/Kconfig
+##
+CONFIG_SPI_TOPCLIFF_PCH=m
+
+##
 ## file: drivers/staging/comedi/Kconfig
 ##
 CONFIG_COMEDI=m
@@ -1277,15 +1291,9 @@ CONFIG_COMEDI_DAS08=m
 CONFIG_COMEDI_FC=m
 
 ##
-## file: drivers/staging/easycap/Kconfig
-##
-CONFIG_EASYCAP=m
-
-##
 ## file: drivers/staging/et131x/Kconfig
 ##
 CONFIG_ET131X=m
-# CONFIG_ET131X_DEBUG is not set
 
 ##
 ## file: drivers/staging/gma500/Kconfig
@@ -1300,7 +1308,12 @@ CONFIG_HYPERV_NET=m
 CONFIG_HYPERV_MOUSE=m
 
 ##
-## file: drivers/staging/lirc/Kconfig
+## file: drivers/staging/media/easycap/Kconfig
+##
+CONFIG_EASYCAP=m
+
+##
+## file: drivers/staging/media/lirc/Kconfig
 ##
 CONFIG_LIRC_STAGING=y
 CONFIG_LIRC_BT829=m
@@ -1318,7 +1331,6 @@ CONFIG_LIRC_ZILOG=m
 ##
 CONFIG_POHMELFS=m
 # CONFIG_POHMELFS_DEBUG is not set
-CONFIG_POHMELFS_CRYPTO=y
 
 ##
 ## file: drivers/staging/rtl8187se/Kconfig
@@ -1344,13 +1356,6 @@ CONFIG_R8712U=m
 ## file: drivers/staging/rts_pstor/Kconfig
 ##
 CONFIG_RTS_PSTOR=m
-
-##
-## file: drivers/staging/tm6000/Kconfig
-##
-CONFIG_VIDEO_TM6000=m
-CONFIG_VIDEO_TM6000_ALSA=m
-CONFIG_VIDEO_TM6000_DVB=m
 
 ##
 ## file: drivers/staging/usbip/Kconfig
@@ -1437,7 +1442,9 @@ CONFIG_USB_SPEEDTOUCH=m
 ## file: drivers/usb/gadget/Kconfig
 ##
 CONFIG_USB_GADGET=m
+## choice: USB Peripheral Controller
 CONFIG_USB_EG20T=m
+## end choice
 
 ##
 ## file: drivers/usb/host/Kconfig
@@ -1567,7 +1574,6 @@ CONFIG_XEN_COMPAT_XENFS=y
 CONFIG_XEN_SYS_HYPERVISOR=y
 CONFIG_XEN_GNTDEV=m
 CONFIG_XEN_GRANT_DEV_ALLOC=m
-CONFIG_XEN_PLATFORM_PCI=y
 
 ##
 ## file: fs/partitions/Kconfig
@@ -1756,4 +1762,16 @@ CONFIG_SND_YMFPCI=m
 ## file: sound/pci/hda/Kconfig
 ##
 CONFIG_SND_HDA_INTEL=m
+
+##
+## file: unknown
+##
+CONFIG_DMAR=y
+# CONFIG_DMAR_DEFAULT_ON is not set
+# CONFIG_ET131X_DEBUG is not set
+CONFIG_INTR_REMAP=y
+# CONFIG_MTD_DEBUG is not set
+CONFIG_POHMELFS_CRYPTO=y
+# CONFIG_XEN_DEBUG is not set
+CONFIG_XEN_PLATFORM_PCI=y
 
