--- a/linux-2.6/debian/config/m68k/config
+++ b/linux-2.6/debian/config/m68k/config
@@ -1,7 +1,11 @@
 ##
-## file: arch/m68k/Kconfig.mmu
+## file: arch/m68k/Kconfig.cpu
 ##
 # CONFIG_ADVANCED is not set
+
+##
+## file: arch/m68k/Kconfig.devices
+##
 CONFIG_PROC_HARDWARE=y
 
 ##
@@ -98,8 +102,8 @@ CONFIG_INPUT_MOUSE=y
 CONFIG_NETDEVICES=y
 # CONFIG_BONDING is not set
 CONFIG_EQUALIZER=m
-# CONFIG_TUN is not set
 # CONFIG_NETPOLL_TRAP is not set
+# CONFIG_TUN is not set
 
 ##
 ## file: drivers/net/wan/Kconfig
