--- a/linux-2.6/debian/config/mips/config
+++ b/linux-2.6/debian/config/mips/config
@@ -9,7 +9,7 @@ CONFIG_SECCOMP=y
 # CONFIG_RAPIDIO is not set
 
 ##
-## file: drivers/net/Kconfig
+## file: drivers/net/ethernet/sun/Kconfig
 ##
 # CONFIG_NIU is not set
 
