Limit CONFIG_STAGING_MEDIA to x86
git-svn-id: svn://svn.debian.org/svn/kernel/dists/trunk@18515 510b9475-24dd-0310-9b6c-e0eefe99d49f

--- a/linux-2.6/debian/config/config
+++ b/linux-2.6/debian/config/config
@@ -2786,12 +2786,7 @@ CONFIG_STAGING=y
 ##
 ## file: drivers/staging/media/Kconfig
 ##
-CONFIG_STAGING_MEDIA=y
-
-##
-## file: drivers/staging/media/go7007/Kconfig
-##
-# CONFIG_VIDEO_GO7007 is not set
+# CONFIG_STAGING_MEDIA is not set
 
 ##
 ## file: drivers/staging/panel/Kconfig
