--- a/linux-2.6/debian/config/kernelarch-x86/config
+++ b/linux-2.6/debian/config/kernelarch-x86/config
@@ -1308,9 +1308,19 @@ CONFIG_HYPERV_NET=m
 CONFIG_HYPERV_MOUSE=m
 
 ##
+## file: drivers/staging/media/Kconfig
+##
+CONFIG_STAGING_MEDIA=y
+
+##
 ## file: drivers/staging/media/easycap/Kconfig
 ##
 CONFIG_EASYCAP=m
+
+##
+## file: drivers/staging/media/go7007/Kconfig
+##
+# CONFIG_VIDEO_GO7007 is not set
 
 ##
 ## file: drivers/staging/media/lirc/Kconfig
